новые слова языков

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -1,177 +1,379 @@
 {
-   "common": {
-     "loading": "Laden...",
-     "error": "Fehler",
-     "success": "Erfolg",
-     "cancel": "Abbrechen",
-     "confirm": "Bestätigen",
-     "save": "Speichern",
-     "delete": "Löschen",
-     "edit": "Bearbeiten",
-     "back": "Zurück",
-     "next": "Weiter",
-     "close": "Schließen",
-     "open": "Öffnen",
-     "play": "Spielen",
-     "daily": "täglich",
-     "online": "Online: {{count}}",
-     "balance": "Guthaben"
-   },
-   "header": {
-     "home": "Startseite",
-     "cases": "Kisten",
-     "profile": "Profil",
-     "leaderboard": "Bestenliste",
-     "inventory": "Inventar",
-     "exchange": "Tausch",
-     "slots": "Spielautomaten",
-     "login": "Anmelden",
-     "register": "Registrieren",
-     "logout": "Abmelden",
-     "notifications": "Benachrichtigungen"
-   },
-   "auth": {
-     "login_title": "Anmelden",
-     "register_title": "Konto erstellen",
-     "username": "Benutzername",
-     "email": "E-Mail",
-     "password": "Passwort",
-     "confirm_password": "Passwort bestätigen",
-     "remember_me": "Angemeldet bleiben",
-     "forgot_password": "Passwort vergessen?",
-     "no_account": "Kein Konto?",
-     "have_account": "Bereits ein Konto?",
-     "steam_login": "Mit Steam anmelden",
-     "login_success": "Erfolgreich angemeldet",
-     "register_success": "Registrierung erfolgreich",
-     "invalid_credentials": "Ungültige Anmeldedaten",
-     "email_verification": "E-Mail-Verifizierung"
-   },
-   "cases": {
-     "title": "Kisten",
-     "premium_case": "Premium-Kiste",
-     "daily_case": "Tägliche Kiste",
-     "bonus_case": "Bonus-Kiste",
-     "buy_case": "Kiste kaufen",
-     "open_case": "Kiste öffnen",
-     "case_opened": "Kiste geöffnet!",
-     "congratulations": "Glückwunsch!",
-     "you_won": "Du hast gewonnen:",
-     "next_case_in": "Nächste Kiste in:",
-     "available_in": "Verfügbar in:",
-     "case_preview": "Kisten-Vorschau",
-     "case_contents": "Kisten-Inhalt",
-     "drop_rate": "Drop-Rate"
-   },
-   "profile": {
-     "title": "Profil",
-     "statistics": "Statistiken",
-     "achievements": "Errungenschaften",
-     "transactions": "Transaktionen",
-     "settings": "Einstellungen",
-     "level": "Level",
-     "experience": "Erfahrung",
-     "cases_opened": "Geöffnete Kisten",
-     "total_spent": "Insgesamt ausgegeben",
-     "total_won": "Insgesamt gewonnen",
-     "winnings": "Gewinne",
-     "subscription": "Abonnement",
-     "subscription_active": "Abonnement aktiv",
-     "subscription_expires": "Abonnement läuft ab",
-     "subscription_days_left": "Verbleibende Tage: {{days}}",
-     "steam_profile": "Steam-Profil",
-     "trade_url": "Handels-URL"
-   },
-   "inventory": {
-     "title": "Inventar",
-     "your_items": "Deine Gegenstände",
-     "no_items": "Du hast noch keine Gegenstände",
-     "sell_item": "Gegenstand verkaufen",
-     "withdraw_item": "Gegenstand abheben",
-     "item_sold": "Gegenstand verkauft",
-     "item_withdrawn": "Gegenstand abgehoben",
-     "rarity": "Seltenheit",
-     "price": "Preis",
-     "value": "Wert"
-   },
-   "leaderboard": {
-     "title": "Spieler-Rangliste",
-     "top_players": "Top-Spieler",
-     "rank": "Rang",
-     "player": "Spieler",
-     "total_winnings": "Gesamtgewinne",
-     "cases_opened_count": "Geöffnete Kisten",
-     "win_rate": "Gewinnrate"
-   },
-   "games": {
-     "slots": "Spielautomaten",
-     "roulette": "Roulette",
-     "tic_tac_toe": "Tic-Tac-Toe",
-     "play_now": "Jetzt spielen",
-     "bet_amount": "Einsatzbetrag",
-     "spin": "Drehen",
-     "place_bet": "Einsatz platzieren",
-     "game_result": "Spielergebnis",
-     "you_win": "Du gewinnst!",
-     "you_lose": "Du verlierst",
-     "jackpot": "Jackpot!",
-     "bonus_game": "Bonus-Spiel",
-     "mini_game": "Mini-Spiel"
-   },
-   "payment": {
-     "deposit": "Einzahlen",
-     "withdraw": "Abheben",
-     "amount": "Betrag",
-     "payment_method": "Zahlungsmethode",
-     "card": "Kreditkarte",
-     "crypto": "Kryptowährung",
-     "steam_wallet": "Steam-Geldbörse",
-     "minimum_deposit": "Mindesteinzahlung",
-     "maximum_deposit": "Höchsteinzahlung",
-     "processing": "Zahlung wird verarbeitet...",
-     "success": "Zahlung erfolgreich",
-     "failed": "Zahlung fehlgeschlagen"
-   },
-   "notifications": {
-     "no_notifications": "Keine Benachrichtigungen",
-     "mark_all_read": "Alle als gelesen markieren",
-     "case_won": "Kisten-Gewinn",
-     "achievement_unlocked": "Errungenschaft freigeschaltet",
-     "bonus_available": "Bonus verfügbar",
-     "subscription_expiring": "Abonnement läuft ab",
-     "new_items": "Neue Gegenstände hinzugefügt"
-   },
-   "language": {
-     "title": "Sprache",
-     "select_language": "Sprache auswählen",
-     "russian": "Русский",
-     "english": "English",
-     "chinese": "中文",
-     "spanish": "Español",
-     "french": "Français",
-     "german": "Deutsch",
-     "japanese": "日本語",
-     "korean": "한국어"
-   },
-   "errors": {
-     "network_error": "Netzwerkfehler",
-     "server_error": "Serverfehler",
-     "not_found": "Nicht gefunden",
-     "access_denied": "Zugriff verweigert",
-     "insufficient_balance": "Unzureichendes Guthaben",
-     "invalid_trade_url": "Ungültige Handels-URL",
-     "case_not_available": "Kiste nicht verfügbar",
-     "rate_limit": "Zu viele Anfragen"
-   },
-   "time": {
-     "seconds": "Sekunden",
-     "minutes": "Minuten",
-     "hours": "Stunden",
-     "days": "Tage",
-     "second": "Sekunde",
-     "minute": "Minute",
-     "hour": "Stunde",
-     "day": "Tag"
-   }
- }
- 
+  "common": {
+    "loading": "Laden...",
+    "error": "Fehler",
+    "success": "Erfolg",
+    "cancel": "Abbrechen",
+    "confirm": "Bestätigen",
+    "save": "Speichern",
+    "delete": "Löschen",
+    "edit": "Bearbeiten",
+    "back": "Zurück",
+    "next": "Weiter",
+    "close": "Schließen",
+    "open": "Öffnen",
+    "play": "Spielen",
+    "daily": "täglich",
+    "online": "Online: {{count}}",
+    "balance": "Guthaben"
+  },
+  "header": {
+    "home": "Startseite",
+    "cases": "Kisten",
+    "profile": "Profil",
+    "leaderboard": "Rangliste",
+    "inventory": "Inventar",
+    "exchange": "Tausch",
+    "slots": "Spielautomaten",
+    "login": "Anmelden",
+    "register": "Registrieren",
+    "logout": "Abmelden",
+    "notifications": "Benachrichtigungen"
+  },
+  "auth": {
+    "login_title": "Anmelden",
+    "register_title": "Konto erstellen",
+    "username": "Benutzername",
+    "email": "E-Mail",
+    "password": "Passwort",
+    "confirm_password": "Passwort bestätigen",
+    "remember_me": "Angemeldet bleiben",
+    "forgot_password": "Passwort vergessen?",
+    "no_account": "Kein Konto?",
+    "have_account": "Bereits ein Konto?",
+    "steam_login": "Mit Steam anmelden",
+    "login_success": "Anmeldung erfolgreich",
+    "register_success": "Registrierung erfolgreich",
+    "invalid_credentials": "Ungültige Anmeldedaten",
+    "email_verification": "E-Mail-Verifizierung"
+  },
+  "cases": {
+    "title": "Kisten",
+    "premium_case": "Premium-Kiste",
+    "daily_case": "Tägliche Kiste",
+    "bonus_case": "Bonus-Kiste",
+    "buy_case": "Kiste kaufen",
+    "open_case": "Kiste öffnen",
+    "case_opened": "Kiste geöffnet!",
+    "congratulations": "Gratulation!",
+    "you_won": "Du hast gewonnen:",
+    "next_case_in": "Nächste Kiste in:",
+    "available_in": "Verfügbar in:",
+    "case_preview": "Kisten-Vorschau",
+    "case_contents": "Kisten-Inhalt",
+    "drop_rate": "Drop-Rate"
+  },
+  "profile": {
+    "title": "Profil",
+    "statistics": "Statistiken",
+    "achievements": "Erfolge",
+    "transactions": "Transaktionen",
+    "settings": "Einstellungen",
+    "level": "Level",
+    "experience": "Erfahrung",
+    "cases_opened": "Geöffnete Kisten",
+    "total_spent": "Insgesamt ausgegeben",
+    "total_won": "Insgesamt gewonnen",
+    "winnings": "Gewinne",
+    "subscription": "Abonnement",
+    "subscription_active": "Abonnement aktiv",
+    "subscription_expires": "Abonnement läuft ab",
+    "subscription_days_left": "Verbleibende Tage: {{days}}",
+    "steam_profile": "Steam-Profil",
+    "trade_url": "Handels-URL"
+  },
+  "inventory": {
+    "title": "Inventar",
+    "your_items": "Deine Gegenstände",
+    "no_items": "Du hast noch keine Gegenstände",
+    "sell_item": "Gegenstand verkaufen",
+    "withdraw_item": "Gegenstand abheben",
+    "item_sold": "Gegenstand verkauft",
+    "item_withdrawn": "Gegenstand abgehoben",
+    "rarity": "Seltenheit",
+    "price": "Preis",
+    "value": "Wert"
+  },
+  "leaderboard": {
+    "title": "Spieler-Rangliste",
+    "top_players": "Top-Spieler",
+    "rank": "Rang",
+    "player": "Spieler",
+    "total_winnings": "Gesamtgewinne",
+    "cases_opened_count": "Geöffnete Kisten",
+    "win_rate": "Gewinnrate"
+  },
+  "games": {
+    "slots": "Spielautomaten",
+    "roulette": "Roulette",
+    "tic_tac_toe": "Tic-Tac-Toe",
+    "play_now": "Jetzt spielen",
+    "bet_amount": "Einsatzbetrag",
+    "spin": "Drehen",
+    "place_bet": "Einsatz setzen",
+    "game_result": "Spielergebnis",
+    "you_win": "Du gewinnst!",
+    "you_lose": "Du verlierst",
+    "jackpot": "Jackpot!",
+    "bonus_game": "Bonus-Spiel",
+    "mini_game": "Mini-Spiel"
+  },
+  "payment": {
+    "deposit": "Einzahlen",
+    "withdraw": "Abheben",
+    "amount": "Betrag",
+    "payment_method": "Zahlungsmethode",
+    "card": "Kreditkarte",
+    "crypto": "Kryptowährung",
+    "steam_wallet": "Steam-Wallet",
+    "minimum_deposit": "Mindesteinzahlung",
+    "maximum_deposit": "Höchsteinzahlung",
+    "processing": "Zahlung wird verarbeitet...",
+    "success": "Zahlung erfolgreich",
+    "failed": "Zahlung fehlgeschlagen"
+  },
+  "notifications": {
+    "no_notifications": "Keine Benachrichtigungen",
+    "mark_all_read": "Alle als gelesen markieren",
+    "case_won": "Kisten-Gewinn",
+    "achievement_unlocked": "Erfolg freigeschaltet",
+    "bonus_available": "Bonus verfügbar",
+    "subscription_expiring": "Abonnement läuft ab",
+    "new_items": "Neue Gegenstände hinzugefügt"
+  },
+  "language": {
+    "title": "Sprache",
+    "select_language": "Sprache auswählen",
+    "russian": "Русский",
+    "english": "English",
+    "chinese": "中文",
+    "spanish": "Español",
+    "french": "Français",
+    "german": "Deutsch",
+    "japanese": "日本語",
+    "korean": "한국어"
+  },
+  "errors": {
+    "network_error": "Netzwerkfehler",
+    "server_error": "Serverfehler",
+    "not_found": "Nicht gefunden",
+    "access_denied": "Zugriff verweigert",
+    "insufficient_balance": "Unzureichendes Guthaben",
+    "invalid_trade_url": "Ungültige Handels-URL",
+    "case_not_available": "Kiste nicht verfügbar",
+    "rate_limit": "Zu viele Anfragen"
+  },
+  "time": {
+    "seconds": "Sekunden",
+    "minutes": "Minuten",
+    "hours": "Stunden",
+    "days": "Tage",
+    "second": "Sekunde",
+    "minute": "Minute",
+    "hour": "Stunde",
+    "day": "Tag"
+  },
+  "exchange": {
+    "title": "GEGENSTAND-TAUSCH",
+    "subtitle": "Verkaufen • Tauschen • Status erhalten",
+    "balance": "GUTHABEN",
+    "status": "STATUS",
+    "no_status": "KEINER",
+    "exchange_rate": "KURS",
+    "tier": "Stufe {{tier}}",
+    "sell_mode": "💰 VERKAUFEN",
+    "exchange_mode": "⭐ TAUSCHEN",
+    "search_placeholder": "🔍 Gegenstände suchen...",
+    "all_rarities": "Alle Seltenheiten",
+    "show_info": "▶ Preisinformationen anzeigen",
+    "hide_info": "▼ Informationen ausblenden",
+    "exchange_rates_title": "Tauschkurse",
+    "exchange_rates_description": "Detaillierte Preis- und Tauschbedingungen",
+    "tier_1_title": "Stufe 1 (Status)",
+    "tier_1_price": "150₽ pro Tag",
+    "tier_1_description": "Basis-Abonnement",
+    "tier_2_title": "Stufe 2 (Status+)",
+    "tier_2_price": "150₽ pro Tag",
+    "tier_2_description": "Verbessertes Abonnement",
+    "tier_3_title": "Stufe 3 (Status++)",
+    "tier_3_price": "300₽ pro Tag",
+    "tier_3_description": "Premium-Abonnement",
+    "important_conditions": "Wichtige Bedingungen:",
+    "min_exchange_price": "Mindestwert des Gegenstands für Tausch: {{price}}₽",
+    "sell_percentage": "Beim Verkauf erhältst du 70% des Gegenstandswerts",
+    "no_returns": "Getauschte Gegenstände können nicht zurückgegeben werden",
+    "days_accumulate": "Abonnement-Tage werden zu den aktuellen hinzugefügt",
+    "items_for_sale": "Gegenstände zum Verkauf",
+    "items_for_exchange": "Gegenstände zum Tausch",
+    "items_count": "{{count}} Gegenstände",
+    "loading_inventory": "Lade Inventar...",
+    "inventory_error": "Fehler beim Laden des Inventars",
+    "try_again": "Erneut versuchen",
+    "no_items_to_sell": "Keine Gegenstände zum Verkauf",
+    "no_items_in_inventory": "Keine Gegenstände im Inventar",
+    "open_cases_to_sell": "Versuche Kisten zu öffnen, um Gegenstände zum Verkauf zu erhalten",
+    "change_filters_or_open_cases": "Versuche Filter zu ändern oder Kisten zu öffnen",
+    "item_price": "Preis:",
+    "item_sell_price": "Verkauf:",
+    "item_subscription_days": "Status:",
+    "days_few": "Wenig",
+    "sell_for": "💸 Verkaufen für {{price}}₽",
+    "selling": "Verkaufe...",
+    "exchange_for": "⭐ Tauschen für {{days}}",
+    "exchanging": "Tausche...",
+    "too_cheap": "❌ Zu billig",
+    "rarity_covert": "VERDECKT",
+    "rarity_classified": "KLASSIFIZIERT",
+    "rarity_restricted": "BESCHRÄNKT",
+    "rarity_milspec": "MILITÄRGRADE",
+    "rarity_industrial": "INDUSTRIELL",
+    "rarity_consumer": "VERBRAUCHER",
+    "rarity_contraband": "SCHMUGGELWARE"
+  },
+  "slots": {
+    "title": "Spielautomat",
+    "description": "Erhalte 3 gleiche Gegenstände zum Gewinnen",
+    "spin_cost": "Dreh-Kosten",
+    "your_balance": "Dein Guthaben",
+    "play_button": "Spielen (10 ₽)",
+    "spinning": "Dreht...",
+    "loading_items": "Lade Gegenstände...",
+    "preparing_game": "Bereite Spiel vor",
+    "loading_error": "Ladefehler",
+    "failed_to_load": "Fehler beim Laden der Spieldaten",
+    "reload": "Neu laden",
+    "congratulations_jackpot": "Gratulation! Jackpot!",
+    "winning_item": "Gewinn-Gegenstand:",
+    "item_value": "Wert:",
+    "no_luck": "Kein Glück",
+    "try_again": "Nochmal versuchen!",
+    "result": "Ergebnis:",
+    "empty": "Leer",
+    "insufficient_funds": "Unzureichende Mittel zum Spielen",
+    "please_login": "Bitte anmelden zum Spielen",
+    "loading_items_status": "Lade Gegenstände...",
+    "game_result_congratulations": "🎉 Gratulation! Du hast {{itemName}} gewonnen!",
+    "game_result_no_luck": "😔 Diesmal kein Glück",
+    "connection_error": "Server-Verbindungsfehler",
+    "unknown_error": "Etwas ist schiefgelaufen"
+  },
+  "leaderboard_page": {
+    "title": "Rangliste",
+    "cases_opened_tab": "Geöffnete Kisten",
+    "cases_opened_description": "Top-Spieler nach Anzahl geöffneter Kisten",
+    "level_tab": "Level",
+    "level_description": "Top-Spieler nach Level und Erfahrung",
+    "best_drop_tab": "Bester Drop",
+    "best_drop_description": "Top-Spieler nach teuerstem Gegenstand",
+    "auth_required": "Autorisierung erforderlich",
+    "leaderboard_error": "Fehler beim Laden der Rangliste",
+    "data_error": "Fehler beim Laden der Daten",
+    "loading_data": "Lade Daten...",
+    "no_data": "Keine Daten anzuzeigen",
+    "rank": "Rang",
+    "player": "Spieler",
+    "score_label": "Punkte",
+    "level_label": "Level",
+    "cases_opened_label": "Geöffnete Kisten",
+    "most_expensive_item_label": "Teuerster Gegenstand",
+    "level_prefix": "Level {{level}}"
+  },
+  "case_preview_modal": {
+    "free_case": "Gratis-Kiste",
+    "loading_items": "Lade Gegenstände...",
+    "loading_error": "Fehler beim Laden der Gegenstände",
+    "no_items": "Keine Gegenstände gefunden",
+    "close": "Schließen",
+    "payment_method": "Zahlung:",
+    "balance_payment": "Guthaben",
+    "card_payment": "Bankkarte",
+    "buy": "Kaufen",
+    "open": "Öffnen",
+    "buy_and_open": "Kaufen und Öffnen",
+    "open_case": "Kiste öffnen",
+    "buying": "Kaufe...",
+    "opening": "Öffne...",
+    "going_to_payment": "Zur Zahlung...",
+    "no_image": "Kein Bild",
+    "already_received": "✓ Bereits erhalten",
+    "chance": "Chance:",
+    "bonus": "Bonus",
+    "received": "✓ Erhalten!",
+    "subscription_required": "Benötigt Status-Level {{tier}}+",
+    "your_level": "Dein Level: {{level}}"
+  },
+  "tic_tac_toe": {
+    "title": "Tic-Tac-Toe",
+    "description": "Spiele Tic-Tac-Toe und gewinne Münzen!",
+    "bet_amount": "Einsatzbetrag:",
+    "your_turn": "Dein Zug",
+    "computer_turn": "Computer-Zug",
+    "you_win": "Du gewinnst!",
+    "you_lose": "Du verlierst!",
+    "draw": "Unentschieden!",
+    "play_again": "Nochmal spielen",
+    "start_game": "Spiel starten",
+    "insufficient_balance": "Unzureichendes Guthaben",
+    "game_rules": "Spielregeln",
+    "rule_1": "Setze deinen Einsatz und starte das Spiel",
+    "rule_2": "Erhalte 3 Symbole in einer Reihe zum Gewinnen",
+    "rule_3": "Gewinne und erhalte das Doppelte deines Einsatzes",
+    "rule_4": "Verliere oder Unentschieden und dein Einsatz ist verloren"
+  },
+  "modal": {
+    "confirm": "Bestätigen",
+    "cancel": "Abbrechen",
+    "close": "Schließen",
+    "save": "Speichern",
+    "delete": "Löschen",
+    "loading": "Laden...",
+    "error": "Fehler",
+    "success": "Erfolg",
+    "warning": "Warnung",
+    "info": "Information"
+  },
+  "registration_success_modal": {
+    "title": "Registrierung abgeschlossen!",
+    "welcome": "Willkommen bei ChiBox!",
+    "account_created": "Dein Konto wurde erfolgreich erstellt",
+    "getting_started": "Was als nächstes:",
+    "step_1": "Öffne deine erste gratis Kiste",
+    "step_2": "Erkunde Gegenstände in deinem Inventar",
+    "step_3": "Erwäge Status für Boni zu erhalten",
+    "step_4": "Nimm an Spielen und Wettbewerben teil",
+    "start_playing": "Spielen beginnen",
+    "bonus_received": "Du hast einen Startbonus erhalten!"
+  },
+  "notifications_header": {
+    "title": "Benachrichtigungen",
+    "no_notifications": "Keine neuen Benachrichtigungen",
+    "mark_all_read": "Alle als gelesen markieren",
+    "loading": "Lade Benachrichtigungen...",
+    "error": "Fehler beim Laden der Benachrichtigungen",
+    "case_opened": "Kiste geöffnet",
+    "item_received": "Gegenstand erhalten",
+    "achievement_unlocked": "Erfolg freigeschaltet",
+    "subscription_reminder": "Abonnement-Erinnerung",
+    "bonus_available": "Bonus verfügbar"
+  },
+  "live_drops": {
+    "title": "🔥 Aktuelle Drops",
+    "player_won": "{{player}} hat gewonnen",
+    "just_now": "gerade eben",
+    "minutes_ago": "vor {{minutes}} Min",
+    "hour_ago": "vor einer Stunde",
+    "hours_ago": "vor {{hours}} Std",
+    "no_drops": "Noch keine Drops",
+    "loading_drops": "Lade Drops..."
+  },
+  "banner": {
+    "daily_bonus": "Täglicher Bonus",
+    "claim_bonus": "Bonus beanspruchen",
+    "bonus_claimed": "Bonus beansprucht",
+    "next_bonus_in": "Nächster Bonus in:",
+    "welcome_bonus": "Willkommens-Bonus",
+    "subscription_offer": "Sonderangebot",
+    "limited_time": "Begrenzte Zeit",
+    "get_status": "Status erhalten"
+  }
+}
