--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -570,5 +570,208 @@
       "Simply super!",
       "You're a lucky one!"
     ]
+  },
+  "exchange": {
+    "title": "ITEM EXCHANGE",
+    "subtitle": "Sell • Exchange • Get Status",
+    "balance": "BALANCE",
+    "status": "STATUS",
+    "no_status": "NONE",
+    "exchange_rate": "RATE",
+    "tier": "Tier {{tier}}",
+    "sell_mode": "💰 SELL",
+    "exchange_mode": "⭐ EXCHANGE",
+    "search_placeholder": "🔍 Search items...",
+    "all_rarities": "All Rarities",
+    "show_info": "▶ Show pricing information",
+    "hide_info": "▼ Hide information",
+    "exchange_rates_title": "Exchange Rates",
+    "exchange_rates_description": "Detailed pricing and exchange conditions",
+    "tier_1_title": "Tier 1 (Status)",
+    "tier_1_price": "150₽ per day",
+    "tier_1_description": "Basic subscription",
+    "tier_2_title": "Tier 2 (Status+)",
+    "tier_2_price": "150₽ per day",
+    "tier_2_description": "Enhanced subscription",
+    "tier_3_title": "Tier 3 (Status++)",
+    "tier_3_price": "300₽ per day",
+    "tier_3_description": "Premium subscription",
+    "important_conditions": "Important conditions:",
+    "min_exchange_price": "Minimum item value for exchange: {{price}}₽",
+    "sell_percentage": "When selling you receive 70% of item value",
+    "no_returns": "Exchanged items cannot be returned",
+    "days_accumulate": "Subscription days accumulate with current ones",
+    "items_for_sale": "Items for Sale",
+    "items_for_exchange": "Items for Exchange",
+    "items_count": "{{count}} items",
+    "loading_inventory": "Loading inventory...",
+    "inventory_error": "Error loading inventory",
+    "try_again": "Try Again",
+    "no_items_to_sell": "No items to sell",
+    "no_items_in_inventory": "No items in inventory",
+    "open_cases_to_sell": "Try opening cases to get items for sale",
+    "change_filters_or_open_cases": "Try changing filters or opening cases",
+    "item_price": "Price:",
+    "item_sell_price": "Sale:",
+    "item_subscription_days": "Status:",
+    "days_few": "Low",
+    "sell_for": "💸 Sell for {{price}}₽",
+    "selling": "Selling...",
+    "exchange_for": "⭐ Exchange for {{days}}",
+    "exchanging": "Exchanging...",
+    "too_cheap": "❌ Too cheap",
+    "rarity_covert": "COVERT",
+    "rarity_classified": "CLASSIFIED",
+    "rarity_restricted": "RESTRICTED",
+    "rarity_milspec": "MIL-SPEC",
+    "rarity_industrial": "INDUSTRIAL",
+    "rarity_consumer": "CONSUMER",
+    "rarity_contraband": "CONTRABAND"
+  },
+  "slots": {
+    "title": "Slot Machine",
+    "description": "Get 3 matching items to win",
+    "spin_cost": "Spin Cost",
+    "your_balance": "Your Balance",
+    "play_button": "Play (10 ₽)",
+    "spinning": "Spinning...",
+    "loading_items": "Loading items...",
+    "preparing_game": "Preparing game",
+    "loading_error": "Loading Error",
+    "failed_to_load": "Failed to load game data",
+    "reload": "Reload",
+    "congratulations_jackpot": "Congratulations! Jackpot!",
+    "winning_item": "Winning item:",
+    "item_value": "Value:",
+    "no_luck": "No luck",
+    "try_again": "Try again!",
+    "result": "Result:",
+    "empty": "Empty",
+    "insufficient_funds": "Insufficient funds to play",
+    "please_login": "Please log in to play",
+    "loading_items_status": "Loading items...",
+    "game_result_congratulations": "🎉 Congratulations! You won {{itemName}}!",
+    "game_result_no_luck": "😔 No luck this time",
+    "connection_error": "Server connection error",
+    "unknown_error": "Something went wrong"
+  },
+  "leaderboard_page": {
+    "title": "Leaderboard",
+    "cases_opened_tab": "Cases Opened",
+    "cases_opened_description": "Top players by number of opened cases",
+    "level_tab": "Level",
+    "level_description": "Top players by level and experience",
+    "best_drop_tab": "Best Drop",
+    "best_drop_description": "Top players by most expensive item",
+    "auth_required": "Authorization required",
+    "leaderboard_error": "Error loading leaderboard",
+    "data_error": "Error loading data",
+    "loading_data": "Loading data...",
+    "no_data": "No data to display",
+    "rank": "Rank",
+    "player": "Player",
+    "score_label": "Score",
+    "level_label": "Level",
+    "cases_opened_label": "Cases Opened",
+    "most_expensive_item_label": "Most Expensive Item",
+    "level_prefix": "Level {{level}}"
+  },
+  "case_preview_modal": {
+    "free_case": "Free Case",
+    "loading_items": "Loading items...",
+    "loading_error": "Error loading items",
+    "no_items": "No items found",
+    "close": "Close",
+    "payment_method": "Payment:",
+    "balance_payment": "Balance",
+    "card_payment": "Bank Card",
+    "buy": "Buy",
+    "open": "Open",
+    "buy_and_open": "Buy and Open",
+    "open_case": "Open Case",
+    "buying": "Buying...",
+    "opening": "Opening...",
+    "going_to_payment": "Going to payment...",
+    "no_image": "No image",
+    "already_received": "✓ Already received",
+    "chance": "Chance:",
+    "bonus": "bonus",
+    "received": "✓ Received!",
+    "subscription_required": "Requires status level {{tier}}+",
+    "your_level": "Your level: {{level}}"
+  },
+  "tic_tac_toe": {
+    "title": "Tic Tac Toe",
+    "description": "Play tic tac toe and win coins!",
+    "bet_amount": "Bet Amount:",
+    "your_turn": "Your Turn",
+    "computer_turn": "Computer's Turn",
+    "you_win": "You Win!",
+    "you_lose": "You Lose!",
+    "draw": "Draw!",
+    "play_again": "Play Again",
+    "start_game": "Start Game",
+    "insufficient_balance": "Insufficient Balance",
+    "game_rules": "Game Rules",
+    "rule_1": "Place your bet and start the game",
+    "rule_2": "Get 3 symbols in a row to win",
+    "rule_3": "Win and get double your bet",
+    "rule_4": "Lose or draw and your bet is lost"
+  },
+  "modal": {
+    "confirm": "Confirm",
+    "cancel": "Cancel",
+    "close": "Close",
+    "save": "Save",
+    "delete": "Delete",
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "warning": "Warning",
+    "info": "Information"
+  },
+  "registration_success_modal": {
+    "title": "Registration Complete!",
+    "welcome": "Welcome to ChiBox!",
+    "account_created": "Your account has been successfully created",
+    "getting_started": "What's next:",
+    "step_1": "Open your first free case",
+    "step_2": "Explore items in your inventory",
+    "step_3": "Consider getting status for bonuses",
+    "step_4": "Participate in games and competitions",
+    "start_playing": "Start Playing",
+    "bonus_received": "You received a starting bonus!"
+  },
+  "notifications_header": {
+    "title": "Notifications",
+    "no_notifications": "No new notifications",
+    "mark_all_read": "Mark all as read",
+    "loading": "Loading notifications...",
+    "error": "Error loading notifications",
+    "case_opened": "Case opened",
+    "item_received": "Item received",
+    "achievement_unlocked": "Achievement unlocked",
+    "subscription_reminder": "Subscription reminder",
+    "bonus_available": "Bonus available"
+  },
+  "live_drops": {
+    "title": "🔥 Recent Drops",
+    "player_won": "{{player}} won",
+    "just_now": "just now",
+    "minutes_ago": "{{minutes}} min ago",
+    "hour_ago": "an hour ago",
+    "hours_ago": "{{hours}} h ago",
+    "no_drops": "No drops yet",
+    "loading_drops": "Loading drops..."
+  },
+  "banner": {
+    "daily_bonus": "Daily Bonus",
+    "claim_bonus": "Claim Bonus",
+    "bonus_claimed": "Bonus Claimed",
+    "next_bonus_in": "Next bonus in:",
+    "welcome_bonus": "Welcome Bonus",
+    "subscription_offer": "Special Offer",
+    "limited_time": "Limited Time",
+    "get_status": "Get Status"
   }
 }
