--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -1,177 +1,379 @@
 {
-   "common": {
-     "loading": "Cargando...",
-     "error": "Error",
-     "success": "Éxito",
-     "cancel": "Cancelar",
-     "confirm": "Confirmar",
-     "save": "Guardar",
-     "delete": "Eliminar",
-     "edit": "Editar",
-     "back": "Atrás",
-     "next": "Siguiente",
-     "close": "Cerrar",
-     "open": "Abrir",
-     "play": "Jugar",
-     "daily": "diario",
-     "online": "En línea: {{count}}",
-     "balance": "Saldo"
-   },
-   "header": {
-     "home": "Inicio",
-     "cases": "Cajas",
-     "profile": "Perfil",
-     "leaderboard": "Clasificación",
-     "inventory": "Inventario",
-     "exchange": "Intercambio",
-     "slots": "Tragamonedas",
-     "login": "Iniciar sesión",
-     "register": "Registrarse",
-     "logout": "Cerrar sesión",
-     "notifications": "Notificaciones"
-   },
-   "auth": {
-     "login_title": "Iniciar sesión",
-     "register_title": "Crear cuenta",
-     "username": "Nombre de usuario",
-     "email": "Correo electrónico",
-     "password": "Contraseña",
-     "confirm_password": "Confirmar contraseña",
-     "remember_me": "Recordarme",
-     "forgot_password": "¿Olvidaste tu contraseña?",
-     "no_account": "¿No tienes cuenta?",
-     "have_account": "¿Ya tienes cuenta?",
-     "steam_login": "Iniciar sesión con Steam",
-     "login_success": "Inicio de sesión exitoso",
-     "register_success": "Registro exitoso",
-     "invalid_credentials": "Credenciales inválidas",
-     "email_verification": "Verificación de correo"
-   },
-   "cases": {
-     "title": "Cajas",
-     "premium_case": "Caja Premium",
-     "daily_case": "Caja Diaria",
-     "bonus_case": "Caja Bonus",
-     "buy_case": "Comprar Caja",
-     "open_case": "Abrir Caja",
-     "case_opened": "¡Caja Abierta!",
-     "congratulations": "¡Felicitaciones!",
-     "you_won": "Has ganado:",
-     "next_case_in": "Próxima caja en:",
-     "available_in": "Disponible en:",
-     "case_preview": "Vista previa de caja",
-     "case_contents": "Contenido de la caja",
-     "drop_rate": "Probabilidad"
-   },
-   "profile": {
-     "title": "Perfil",
-     "statistics": "Estadísticas",
-     "achievements": "Logros",
-     "transactions": "Transacciones",
-     "settings": "Configuración",
-     "level": "Nivel",
-     "experience": "Experiencia",
-     "cases_opened": "Cajas Abiertas",
-     "total_spent": "Total Gastado",
-     "total_won": "Total Ganado",
-     "winnings": "Ganancias",
-     "subscription": "Suscripción",
-     "subscription_active": "Suscripción Activa",
-     "subscription_expires": "Suscripción Expira",
-     "subscription_days_left": "Días restantes: {{days}}",
-     "steam_profile": "Perfil Steam",
-     "trade_url": "URL de Intercambio"
-   },
-   "inventory": {
-     "title": "Inventario",
-     "your_items": "Tus Objetos",
-     "no_items": "Aún no tienes objetos",
-     "sell_item": "Vender Objeto",
-     "withdraw_item": "Retirar Objeto",
-     "item_sold": "Objeto Vendido",
-     "item_withdrawn": "Objeto Retirado",
-     "rarity": "Rareza",
-     "price": "Precio",
-     "value": "Valor"
-   },
-   "leaderboard": {
-     "title": "Clasificación de Jugadores",
-     "top_players": "Mejores Jugadores",
-     "rank": "Rango",
-     "player": "Jugador",
-     "total_winnings": "Ganancias Totales",
-     "cases_opened_count": "Cajas Abiertas",
-     "win_rate": "Porcentaje de Victoria"
-   },
-   "games": {
-     "slots": "Tragamonedas",
-     "roulette": "Ruleta",
-     "tic_tac_toe": "Tres en Raya",
-     "play_now": "Jugar Ahora",
-     "bet_amount": "Cantidad de Apuesta",
-     "spin": "Girar",
-     "place_bet": "Hacer Apuesta",
-     "game_result": "Resultado del Juego",
-     "you_win": "¡Ganaste!",
-     "you_lose": "Perdiste",
-     "jackpot": "¡Jackpot!",
-     "bonus_game": "Juego Bonus",
-     "mini_game": "Mini Juego"
-   },
-   "payment": {
-     "deposit": "Depositar",
-     "withdraw": "Retirar",
-     "amount": "Cantidad",
-     "payment_method": "Método de Pago",
-     "card": "Tarjeta de Crédito",
-     "crypto": "Criptomoneda",
-     "steam_wallet": "Cartera Steam",
-     "minimum_deposit": "Depósito Mínimo",
-     "maximum_deposit": "Depósito Máximo",
-     "processing": "Procesando pago...",
-     "success": "Pago exitoso",
-     "failed": "Pago fallido"
-   },
-   "notifications": {
-     "no_notifications": "Sin notificaciones",
-     "mark_all_read": "Marcar todo como leído",
-     "case_won": "Victoria en Caja",
-     "achievement_unlocked": "Logro Desbloqueado",
-     "bonus_available": "Bonus Disponible",
-     "subscription_expiring": "Suscripción Expirando",
-     "new_items": "Nuevos Objetos Añadidos"
-   },
-   "language": {
-     "title": "Idioma",
-     "select_language": "Seleccionar Idioma",
-     "russian": "Русский",
-     "english": "English",
-     "chinese": "中文",
-     "spanish": "Español",
-     "french": "Français",
-     "german": "Deutsch",
-     "japanese": "日本語",
-     "korean": "한국어"
-   },
-   "errors": {
-     "network_error": "Error de Red",
-     "server_error": "Error del Servidor",
-     "not_found": "No Encontrado",
-     "access_denied": "Acceso Denegado",
-     "insufficient_balance": "Saldo Insuficiente",
-     "invalid_trade_url": "URL de Intercambio Inválida",
-     "case_not_available": "Caja No Disponible",
-     "rate_limit": "Demasiadas Solicitudes"
-   },
-   "time": {
-     "seconds": "segundos",
-     "minutes": "minutos",
-     "hours": "horas",
-     "days": "días",
-     "second": "segundo",
-     "minute": "minuto",
-     "hour": "hora",
-     "day": "día"
-   }
- }
- 
+  "common": {
+    "loading": "Cargando...",
+    "error": "Error",
+    "success": "Éxito",
+    "cancel": "Cancelar",
+    "confirm": "Confirmar",
+    "save": "Guardar",
+    "delete": "Eliminar",
+    "edit": "Editar",
+    "back": "Atrás",
+    "next": "Siguiente",
+    "close": "Cerrar",
+    "open": "Abrir",
+    "play": "Jugar",
+    "daily": "diario",
+    "online": "En línea: {{count}}",
+    "balance": "Saldo"
+  },
+  "header": {
+    "home": "Inicio",
+    "cases": "Cajas",
+    "profile": "Perfil",
+    "leaderboard": "Clasificación",
+    "inventory": "Inventario",
+    "exchange": "Intercambio",
+    "slots": "Tragamonedas",
+    "login": "Iniciar sesión",
+    "register": "Registrarse",
+    "logout": "Cerrar sesión",
+    "notifications": "Notificaciones"
+  },
+  "auth": {
+    "login_title": "Iniciar sesión",
+    "register_title": "Crear cuenta",
+    "username": "Nombre de usuario",
+    "email": "Correo electrónico",
+    "password": "Contraseña",
+    "confirm_password": "Confirmar contraseña",
+    "remember_me": "Recordarme",
+    "forgot_password": "¿Olvidaste tu contraseña?",
+    "no_account": "¿No tienes cuenta?",
+    "have_account": "¿Ya tienes cuenta?",
+    "steam_login": "Iniciar sesión con Steam",
+    "login_success": "Inicio de sesión exitoso",
+    "register_success": "Registro exitoso",
+    "invalid_credentials": "Credenciales inválidas",
+    "email_verification": "Verificación de correo"
+  },
+  "cases": {
+    "title": "Cajas",
+    "premium_case": "Caja Premium",
+    "daily_case": "Caja Diaria",
+    "bonus_case": "Caja Bonus",
+    "buy_case": "Comprar Caja",
+    "open_case": "Abrir Caja",
+    "case_opened": "¡Caja Abierta!",
+    "congratulations": "¡Felicitaciones!",
+    "you_won": "Has ganado:",
+    "next_case_in": "Próxima caja en:",
+    "available_in": "Disponible en:",
+    "case_preview": "Vista previa de caja",
+    "case_contents": "Contenido de la caja",
+    "drop_rate": "Probabilidad"
+  },
+  "profile": {
+    "title": "Perfil",
+    "statistics": "Estadísticas",
+    "achievements": "Logros",
+    "transactions": "Transacciones",
+    "settings": "Configuración",
+    "level": "Nivel",
+    "experience": "Experiencia",
+    "cases_opened": "Cajas Abiertas",
+    "total_spent": "Total Gastado",
+    "total_won": "Total Ganado",
+    "winnings": "Ganancias",
+    "subscription": "Suscripción",
+    "subscription_active": "Suscripción Activa",
+    "subscription_expires": "Suscripción Expira",
+    "subscription_days_left": "Días restantes: {{days}}",
+    "steam_profile": "Perfil Steam",
+    "trade_url": "URL de Intercambio"
+  },
+  "inventory": {
+    "title": "Inventario",
+    "your_items": "Tus Objetos",
+    "no_items": "Aún no tienes objetos",
+    "sell_item": "Vender Objeto",
+    "withdraw_item": "Retirar Objeto",
+    "item_sold": "Objeto Vendido",
+    "item_withdrawn": "Objeto Retirado",
+    "rarity": "Rareza",
+    "price": "Precio",
+    "value": "Valor"
+  },
+  "leaderboard": {
+    "title": "Clasificación de Jugadores",
+    "top_players": "Mejores Jugadores",
+    "rank": "Rango",
+    "player": "Jugador",
+    "total_winnings": "Ganancias Totales",
+    "cases_opened_count": "Cajas Abiertas",
+    "win_rate": "Porcentaje de Victoria"
+  },
+  "games": {
+    "slots": "Tragamonedas",
+    "roulette": "Ruleta",
+    "tic_tac_toe": "Tres en Raya",
+    "play_now": "Jugar Ahora",
+    "bet_amount": "Cantidad de Apuesta",
+    "spin": "Girar",
+    "place_bet": "Hacer Apuesta",
+    "game_result": "Resultado del Juego",
+    "you_win": "¡Ganaste!",
+    "you_lose": "Perdiste",
+    "jackpot": "¡Jackpot!",
+    "bonus_game": "Juego Bonus",
+    "mini_game": "Mini Juego"
+  },
+  "payment": {
+    "deposit": "Depositar",
+    "withdraw": "Retirar",
+    "amount": "Cantidad",
+    "payment_method": "Método de Pago",
+    "card": "Tarjeta de Crédito",
+    "crypto": "Criptomoneda",
+    "steam_wallet": "Cartera Steam",
+    "minimum_deposit": "Depósito Mínimo",
+    "maximum_deposit": "Depósito Máximo",
+    "processing": "Procesando pago...",
+    "success": "Pago exitoso",
+    "failed": "Pago fallido"
+  },
+  "notifications": {
+    "no_notifications": "Sin notificaciones",
+    "mark_all_read": "Marcar todo como leído",
+    "case_won": "Victoria en Caja",
+    "achievement_unlocked": "Logro Desbloqueado",
+    "bonus_available": "Bonus Disponible",
+    "subscription_expiring": "Suscripción Expirando",
+    "new_items": "Nuevos Objetos Añadidos"
+  },
+  "language": {
+    "title": "Idioma",
+    "select_language": "Seleccionar Idioma",
+    "russian": "Русский",
+    "english": "English",
+    "chinese": "中文",
+    "spanish": "Español",
+    "french": "Français",
+    "german": "Deutsch",
+    "japanese": "日本語",
+    "korean": "한국어"
+  },
+  "errors": {
+    "network_error": "Error de Red",
+    "server_error": "Error del Servidor",
+    "not_found": "No Encontrado",
+    "access_denied": "Acceso Denegado",
+    "insufficient_balance": "Saldo Insuficiente",
+    "invalid_trade_url": "URL de Intercambio Inválida",
+    "case_not_available": "Caja No Disponible",
+    "rate_limit": "Demasiadas Solicitudes"
+  },
+  "time": {
+    "seconds": "segundos",
+    "minutes": "minutos",
+    "hours": "horas",
+    "days": "días",
+    "second": "segundo",
+    "minute": "minuto",
+    "hour": "hora",
+    "day": "día"
+  },
+  "exchange": {
+    "title": "INTERCAMBIO DE OBJETOS",
+    "subtitle": "Vender • Intercambiar • Obtener Estado",
+    "balance": "SALDO",
+    "status": "ESTADO",
+    "no_status": "NINGUNO",
+    "exchange_rate": "TASA",
+    "tier": "Nivel {{tier}}",
+    "sell_mode": "💰 VENDER",
+    "exchange_mode": "⭐ INTERCAMBIAR",
+    "search_placeholder": "🔍 Buscar objetos...",
+    "all_rarities": "Todas las Rarezas",
+    "show_info": "▶ Mostrar información de precios",
+    "hide_info": "▼ Ocultar información",
+    "exchange_rates_title": "Tasas de Intercambio",
+    "exchange_rates_description": "Información detallada de precios y condiciones",
+    "tier_1_title": "Nivel 1 (Estado)",
+    "tier_1_price": "150₽ por día",
+    "tier_1_description": "Suscripción básica",
+    "tier_2_title": "Nivel 2 (Estado+)",
+    "tier_2_price": "150₽ por día",
+    "tier_2_description": "Suscripción mejorada",
+    "tier_3_title": "Nivel 3 (Estado++)",
+    "tier_3_price": "300₽ por día",
+    "tier_3_description": "Suscripción premium",
+    "important_conditions": "Condiciones importantes:",
+    "min_exchange_price": "Valor mínimo del objeto para intercambio: {{price}}₽",
+    "sell_percentage": "Al vender recibes el 70% del valor del objeto",
+    "no_returns": "Los objetos intercambiados no se pueden devolver",
+    "days_accumulate": "Los días de suscripción se acumulan con los actuales",
+    "items_for_sale": "Objetos en Venta",
+    "items_for_exchange": "Objetos para Intercambio",
+    "items_count": "{{count}} objetos",
+    "loading_inventory": "Cargando inventario...",
+    "inventory_error": "Error al cargar inventario",
+    "try_again": "Intentar de Nuevo",
+    "no_items_to_sell": "No hay objetos para vender",
+    "no_items_in_inventory": "No hay objetos en el inventario",
+    "open_cases_to_sell": "Intenta abrir cajas para obtener objetos para vender",
+    "change_filters_or_open_cases": "Intenta cambiar los filtros o abrir cajas",
+    "item_price": "Precio:",
+    "item_sell_price": "Venta:",
+    "item_subscription_days": "Estado:",
+    "days_few": "Poco",
+    "sell_for": "💸 Vender por {{price}}₽",
+    "selling": "Vendiendo...",
+    "exchange_for": "⭐ Intercambiar por {{days}}",
+    "exchanging": "Intercambiando...",
+    "too_cheap": "❌ Muy barato",
+    "rarity_covert": "ENCUBIERTO",
+    "rarity_classified": "CLASIFICADO",
+    "rarity_restricted": "RESTRINGIDO",
+    "rarity_milspec": "GRADO MILITAR",
+    "rarity_industrial": "INDUSTRIAL",
+    "rarity_consumer": "CONSUMIDOR",
+    "rarity_contraband": "CONTRABANDO"
+  },
+  "slots": {
+    "title": "Tragamonedas",
+    "description": "Consigue 3 objetos iguales para ganar",
+    "spin_cost": "Costo del Giro",
+    "your_balance": "Tu Saldo",
+    "play_button": "Jugar (10 ₽)",
+    "spinning": "Girando...",
+    "loading_items": "Cargando objetos...",
+    "preparing_game": "Preparando juego",
+    "loading_error": "Error de Carga",
+    "failed_to_load": "Error al cargar datos del juego",
+    "reload": "Recargar",
+    "congratulations_jackpot": "¡Felicitaciones! ¡Jackpot!",
+    "winning_item": "Objeto ganador:",
+    "item_value": "Valor:",
+    "no_luck": "Sin suerte",
+    "try_again": "¡Inténtalo de nuevo!",
+    "result": "Resultado:",
+    "empty": "Vacío",
+    "insufficient_funds": "Fondos insuficientes para jugar",
+    "please_login": "Por favor inicia sesión para jugar",
+    "loading_items_status": "Cargando objetos...",
+    "game_result_congratulations": "🎉 ¡Felicitaciones! ¡Ganaste {{itemName}}!",
+    "game_result_no_luck": "😔 Sin suerte esta vez",
+    "connection_error": "Error de conexión al servidor",
+    "unknown_error": "Algo salió mal"
+  },
+  "leaderboard_page": {
+    "title": "Tabla de Clasificación",
+    "cases_opened_tab": "Cajas Abiertas",
+    "cases_opened_description": "Mejores jugadores por número de cajas abiertas",
+    "level_tab": "Nivel",
+    "level_description": "Mejores jugadores por nivel y experiencia",
+    "best_drop_tab": "Mejor Drop",
+    "best_drop_description": "Mejores jugadores por objeto más caro",
+    "auth_required": "Autorización requerida",
+    "leaderboard_error": "Error al cargar clasificación",
+    "data_error": "Error al cargar datos",
+    "loading_data": "Cargando datos...",
+    "no_data": "No hay datos para mostrar",
+    "rank": "Rango",
+    "player": "Jugador",
+    "score_label": "Puntuación",
+    "level_label": "Nivel",
+    "cases_opened_label": "Cajas Abiertas",
+    "most_expensive_item_label": "Objeto Más Caro",
+    "level_prefix": "Nivel {{level}}"
+  },
+  "case_preview_modal": {
+    "free_case": "Caja Gratuita",
+    "loading_items": "Cargando objetos...",
+    "loading_error": "Error al cargar objetos",
+    "no_items": "No se encontraron objetos",
+    "close": "Cerrar",
+    "payment_method": "Pago:",
+    "balance_payment": "Saldo",
+    "card_payment": "Tarjeta Bancaria",
+    "buy": "Comprar",
+    "open": "Abrir",
+    "buy_and_open": "Comprar y Abrir",
+    "open_case": "Abrir Caja",
+    "buying": "Comprando...",
+    "opening": "Abriendo...",
+    "going_to_payment": "Yendo al pago...",
+    "no_image": "Sin imagen",
+    "already_received": "✓ Ya recibido",
+    "chance": "Probabilidad:",
+    "bonus": "bonus",
+    "received": "✓ ¡Recibido!",
+    "subscription_required": "Requiere nivel de estado {{tier}}+",
+    "your_level": "Tu nivel: {{level}}"
+  },
+  "tic_tac_toe": {
+    "title": "Tres en Raya",
+    "description": "¡Juega tres en raya y gana monedas!",
+    "bet_amount": "Cantidad de Apuesta:",
+    "your_turn": "Tu Turno",
+    "computer_turn": "Turno de la Computadora",
+    "you_win": "¡Ganaste!",
+    "you_lose": "¡Perdiste!",
+    "draw": "¡Empate!",
+    "play_again": "Jugar de Nuevo",
+    "start_game": "Iniciar Juego",
+    "insufficient_balance": "Saldo Insuficiente",
+    "game_rules": "Reglas del Juego",
+    "rule_1": "Haz tu apuesta e inicia el juego",
+    "rule_2": "Consigue 3 símbolos en línea para ganar",
+    "rule_3": "Gana y obtén el doble de tu apuesta",
+    "rule_4": "Pierde o empata y pierdes tu apuesta"
+  },
+  "modal": {
+    "confirm": "Confirmar",
+    "cancel": "Cancelar",
+    "close": "Cerrar",
+    "save": "Guardar",
+    "delete": "Eliminar",
+    "loading": "Cargando...",
+    "error": "Error",
+    "success": "Éxito",
+    "warning": "Advertencia",
+    "info": "Información"
+  },
+  "registration_success_modal": {
+    "title": "¡Registro Completo!",
+    "welcome": "¡Bienvenido a ChiBox!",
+    "account_created": "Tu cuenta ha sido creada exitosamente",
+    "getting_started": "Qué sigue:",
+    "step_1": "Abre tu primera caja gratuita",
+    "step_2": "Explora los objetos en tu inventario",
+    "step_3": "Considera obtener estado para bonos",
+    "step_4": "Participa en juegos y competencias",
+    "start_playing": "Comenzar a Jugar",
+    "bonus_received": "¡Recibiste un bonus de inicio!"
+  },
+  "notifications_header": {
+    "title": "Notificaciones",
+    "no_notifications": "No hay notificaciones nuevas",
+    "mark_all_read": "Marcar todo como leído",
+    "loading": "Cargando notificaciones...",
+    "error": "Error al cargar notificaciones",
+    "case_opened": "Caja abierta",
+    "item_received": "Objeto recibido",
+    "achievement_unlocked": "Logro desbloqueado",
+    "subscription_reminder": "Recordatorio de suscripción",
+    "bonus_available": "Bonus disponible"
+  },
+  "live_drops": {
+    "title": "🔥 Drops Recientes",
+    "player_won": "{{player}} ganó",
+    "just_now": "justo ahora",
+    "minutes_ago": "hace {{minutes}} min",
+    "hour_ago": "hace una hora",
+    "hours_ago": "hace {{hours}} h",
+    "no_drops": "Sin drops aún",
+    "loading_drops": "Cargando drops..."
+  },
+  "banner": {
+    "daily_bonus": "Bonus Diario",
+    "claim_bonus": "Reclamar Bonus",
+    "bonus_claimed": "Bonus Reclamado",
+    "next_bonus_in": "Próximo bonus en:",
+    "welcome_bonus": "Bonus de Bienvenida",
+    "subscription_offer": "Oferta Especial",
+    "limited_time": "Tiempo Limitado",
+    "get_status": "Obtener Estado"
+  }
+}
