--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -1,177 +1,379 @@
 {
-   "common": {
-     "loading": "読み込み中...",
-     "error": "エラー",
-     "success": "成功",
-     "cancel": "キャンセル",
-     "confirm": "確認",
-     "save": "保存",
-     "delete": "削除",
-     "edit": "編集",
-     "back": "戻る",
-     "next": "次へ",
-     "close": "閉じる",
-     "open": "開く",
-     "play": "プレイ",
-     "daily": "毎日",
-     "online": "オンライン：{{count}}",
-     "balance": "残高"
-   },
-   "header": {
-     "home": "ホーム",
-     "cases": "ケース",
-     "profile": "プロフィール",
-     "leaderboard": "リーダーボード",
-     "inventory": "インベントリ",
-     "exchange": "交換",
-     "slots": "スロット",
-     "login": "ログイン",
-     "register": "登録",
-     "logout": "ログアウト",
-     "notifications": "通知"
-   },
-   "auth": {
-     "login_title": "ログイン",
-     "register_title": "アカウント作成",
-     "username": "ユーザー名",
-     "email": "メールアドレス",
-     "password": "パスワード",
-     "confirm_password": "パスワード確認",
-     "remember_me": "ログイン状態を保持",
-     "forgot_password": "パスワードを忘れましたか？",
-     "no_account": "アカウントをお持ちでない方",
-     "have_account": "既にアカウントをお持ちの方",
-     "steam_login": "Steamでログイン",
-     "login_success": "ログイン成功",
-     "register_success": "登録成功",
-     "invalid_credentials": "認証情報が無効です",
-     "email_verification": "メール認証"
-   },
-   "cases": {
-     "title": "ケース",
-     "premium_case": "プレミアムケース",
-     "daily_case": "デイリーケース",
-     "bonus_case": "ボーナスケース",
-     "buy_case": "ケースを購入",
-     "open_case": "ケースを開ける",
-     "case_opened": "ケースが開かれました！",
-     "congratulations": "おめでとうございます！",
-     "you_won": "獲得アイテム：",
-     "next_case_in": "次のケースまで：",
-     "available_in": "利用可能まで：",
-     "case_preview": "ケースプレビュー",
-     "case_contents": "ケース内容",
-     "drop_rate": "ドロップ率"
-   },
-   "profile": {
-     "title": "プロフィール",
-     "statistics": "統計",
-     "achievements": "実績",
-     "transactions": "取引履歴",
-     "settings": "設定",
-     "level": "レベル",
-     "experience": "経験値",
-     "cases_opened": "開封ケース数",
-     "total_spent": "総支出",
-     "total_won": "総獲得",
-     "winnings": "獲得金額",
-     "subscription": "サブスクリプション",
-     "subscription_active": "サブスクリプション有効",
-     "subscription_expires": "サブスクリプション期限",
-     "subscription_days_left": "残り日数：{{days}}",
-     "steam_profile": "Steamプロフィール",
-     "trade_url": "トレードURL"
-   },
-   "inventory": {
-     "title": "インベントリ",
-     "your_items": "所持アイテム",
-     "no_items": "アイテムがありません",
-     "sell_item": "アイテムを売る",
-     "withdraw_item": "アイテムを引き出し",
-     "item_sold": "アイテムが売却されました",
-     "item_withdrawn": "アイテムが引き出されました",
-     "rarity": "レア度",
-     "price": "価格",
-     "value": "価値"
-   },
-   "leaderboard": {
-     "title": "プレイヤーランキング",
-     "top_players": "トッププレイヤー",
-     "rank": "順位",
-     "player": "プレイヤー",
-     "total_winnings": "総獲得額",
-     "cases_opened_count": "ケース開封数",
-     "win_rate": "勝率"
-   },
-   "games": {
-     "slots": "スロット",
-     "roulette": "ルーレット",
-     "tic_tac_toe": "三目並べ",
-     "play_now": "今すぐプレイ",
-     "bet_amount": "ベット額",
-     "spin": "スピン",
-     "place_bet": "ベットする",
-     "game_result": "ゲーム結果",
-     "you_win": "勝利！",
-     "you_lose": "敗北",
-     "jackpot": "ジャックポット！",
-     "bonus_game": "ボーナスゲーム",
-     "mini_game": "ミニゲーム"
-   },
-   "payment": {
-     "deposit": "入金",
-     "withdraw": "出金",
-     "amount": "金額",
-     "payment_method": "支払い方法",
-     "card": "クレジットカード",
-     "crypto": "暗号通貨",
-     "steam_wallet": "Steamウォレット",
-     "minimum_deposit": "最小入金額",
-     "maximum_deposit": "最大入金額",
-     "processing": "支払い処理中...",
-     "success": "支払い成功",
-     "failed": "支払い失敗"
-   },
-   "notifications": {
-     "no_notifications": "通知はありません",
-     "mark_all_read": "すべて既読にする",
-     "case_won": "ケース勝利",
-     "achievement_unlocked": "実績解除",
-     "bonus_available": "ボーナス利用可能",
-     "subscription_expiring": "サブスクリプション期限切れ",
-     "new_items": "新しいアイテムが追加されました"
-   },
-   "language": {
-     "title": "言語",
-     "select_language": "言語を選択",
-     "russian": "Русский",
-     "english": "English",
-     "chinese": "中文",
-     "spanish": "Español",
-     "french": "Français",
-     "german": "Deutsch",
-     "japanese": "日本語",
-     "korean": "한국어"
-   },
-   "errors": {
-     "network_error": "ネットワークエラー",
-     "server_error": "サーバーエラー",
-     "not_found": "見つかりません",
-     "access_denied": "アクセス拒否",
-     "insufficient_balance": "残高不足",
-     "invalid_trade_url": "無効なトレードURL",
-     "case_not_available": "ケースが利用できません",
-     "rate_limit": "リクエスト過多"
-   },
-   "time": {
-     "seconds": "秒",
-     "minutes": "分",
-     "hours": "時間",
-     "days": "日",
-     "second": "秒",
-     "minute": "分",
-     "hour": "時間",
-     "day": "日"
-   }
- }
- 
+  "common": {
+    "loading": "読み込み中...",
+    "error": "エラー",
+    "success": "成功",
+    "cancel": "キャンセル",
+    "confirm": "確認",
+    "save": "保存",
+    "delete": "削除",
+    "edit": "編集",
+    "back": "戻る",
+    "next": "次へ",
+    "close": "閉じる",
+    "open": "開く",
+    "play": "プレイ",
+    "daily": "毎日",
+    "online": "オンライン: {{count}}",
+    "balance": "残高"
+  },
+  "header": {
+    "home": "ホーム",
+    "cases": "ケース",
+    "profile": "プロフィール",
+    "leaderboard": "ランキング",
+    "inventory": "インベントリ",
+    "exchange": "交換",
+    "slots": "スロット",
+    "login": "ログイン",
+    "register": "登録",
+    "logout": "ログアウト",
+    "notifications": "通知"
+  },
+  "auth": {
+    "login_title": "ログイン",
+    "register_title": "アカウント作成",
+    "username": "ユーザー名",
+    "email": "メールアドレス",
+    "password": "パスワード",
+    "confirm_password": "パスワード確認",
+    "remember_me": "ログイン状態を保持",
+    "forgot_password": "パスワードを忘れましたか？",
+    "no_account": "アカウントをお持ちでない方",
+    "have_account": "すでにアカウントをお持ちの方",
+    "steam_login": "Steamでログイン",
+    "login_success": "ログインに成功しました",
+    "register_success": "登録に成功しました",
+    "invalid_credentials": "認証情報が無効です",
+    "email_verification": "メール認証"
+  },
+  "cases": {
+    "title": "ケース",
+    "premium_case": "プレミアムケース",
+    "daily_case": "デイリーケース",
+    "bonus_case": "ボーナスケース",
+    "buy_case": "ケース購入",
+    "open_case": "ケース開封",
+    "case_opened": "ケース開封完了！",
+    "congratulations": "おめでとうございます！",
+    "you_won": "獲得アイテム：",
+    "next_case_in": "次のケースまで：",
+    "available_in": "利用可能まで：",
+    "case_preview": "ケースプレビュー",
+    "case_contents": "ケース内容",
+    "drop_rate": "ドロップ率"
+  },
+  "profile": {
+    "title": "プロフィール",
+    "statistics": "統計",
+    "achievements": "実績",
+    "transactions": "取引履歴",
+    "settings": "設定",
+    "level": "レベル",
+    "experience": "経験値",
+    "cases_opened": "開封したケース",
+    "total_spent": "総支出",
+    "total_won": "総獲得",
+    "winnings": "賞金",
+    "subscription": "サブスクリプション",
+    "subscription_active": "サブスクリプション有効",
+    "subscription_expires": "サブスクリプション期限",
+    "subscription_days_left": "残り日数: {{days}}",
+    "steam_profile": "Steamプロフィール",
+    "trade_url": "トレードURL"
+  },
+  "inventory": {
+    "title": "インベントリ",
+    "your_items": "所有アイテム",
+    "no_items": "アイテムがありません",
+    "sell_item": "アイテム売却",
+    "withdraw_item": "アイテム出金",
+    "item_sold": "アイテム売却済み",
+    "item_withdrawn": "アイテム出金済み",
+    "rarity": "レア度",
+    "price": "価格",
+    "value": "価値"
+  },
+  "leaderboard": {
+    "title": "プレイヤーランキング",
+    "top_players": "トッププレイヤー",
+    "rank": "順位",
+    "player": "プレイヤー",
+    "total_winnings": "総獲得金額",
+    "cases_opened_count": "開封ケース数",
+    "win_rate": "勝率"
+  },
+  "games": {
+    "slots": "スロット",
+    "roulette": "ルーレット",
+    "tic_tac_toe": "三目並べ",
+    "play_now": "今すぐプレイ",
+    "bet_amount": "ベット額",
+    "spin": "スピン",
+    "place_bet": "ベット",
+    "game_result": "ゲーム結果",
+    "you_win": "勝利！",
+    "you_lose": "敗北",
+    "jackpot": "ジャックポット！",
+    "bonus_game": "ボーナスゲーム",
+    "mini_game": "ミニゲーム"
+  },
+  "payment": {
+    "deposit": "入金",
+    "withdraw": "出金",
+    "amount": "金額",
+    "payment_method": "支払い方法",
+    "card": "クレジットカード",
+    "crypto": "暗号通貨",
+    "steam_wallet": "Steamウォレット",
+    "minimum_deposit": "最低入金額",
+    "maximum_deposit": "最高入金額",
+    "processing": "支払い処理中...",
+    "success": "支払い成功",
+    "failed": "支払い失敗"
+  },
+  "notifications": {
+    "no_notifications": "通知なし",
+    "mark_all_read": "すべて既読にする",
+    "case_won": "ケース勝利",
+    "achievement_unlocked": "実績解除",
+    "bonus_available": "ボーナス利用可能",
+    "subscription_expiring": "サブスクリプション期限切れ",
+    "new_items": "新アイテム追加"
+  },
+  "language": {
+    "title": "言語",
+    "select_language": "言語を選択",
+    "russian": "Русский",
+    "english": "English",
+    "chinese": "中文",
+    "spanish": "Español",
+    "french": "Français",
+    "german": "Deutsch",
+    "japanese": "日本語",
+    "korean": "한국어"
+  },
+  "errors": {
+    "network_error": "ネットワークエラー",
+    "server_error": "サーバーエラー",
+    "not_found": "見つかりません",
+    "access_denied": "アクセス拒否",
+    "insufficient_balance": "残高不足",
+    "invalid_trade_url": "無効なトレードURL",
+    "case_not_available": "ケース利用不可",
+    "rate_limit": "リクエスト過多"
+  },
+  "time": {
+    "seconds": "秒",
+    "minutes": "分",
+    "hours": "時間",
+    "days": "日",
+    "second": "秒",
+    "minute": "分",
+    "hour": "時間",
+    "day": "日"
+  },
+  "exchange": {
+    "title": "アイテム交換",
+    "subtitle": "売却 • 交換 • ステータス取得",
+    "balance": "残高",
+    "status": "ステータス",
+    "no_status": "なし",
+    "exchange_rate": "レート",
+    "tier": "ティア {{tier}}",
+    "sell_mode": "💰 売却",
+    "exchange_mode": "⭐ 交換",
+    "search_placeholder": "🔍 アイテム検索...",
+    "all_rarities": "すべてのレア度",
+    "show_info": "▶ 価格情報を表示",
+    "hide_info": "▼ 情報を隠す",
+    "exchange_rates_title": "交換レート",
+    "exchange_rates_description": "詳細な価格と交換条件",
+    "tier_1_title": "ティア 1 (ステータス)",
+    "tier_1_price": "150₽/日",
+    "tier_1_description": "基本サブスクリプション",
+    "tier_2_title": "ティア 2 (ステータス+)",
+    "tier_2_price": "150₽/日",
+    "tier_2_description": "強化サブスクリプション",
+    "tier_3_title": "ティア 3 (ステータス++)",
+    "tier_3_price": "300₽/日",
+    "tier_3_description": "プレミアムサブスクリプション",
+    "important_conditions": "重要な条件：",
+    "min_exchange_price": "交換可能な最低アイテム価値：{{price}}₽",
+    "sell_percentage": "売却時にアイテム価値の70%を獲得",
+    "no_returns": "交換したアイテムは返品不可",
+    "days_accumulate": "サブスクリプション日数は現在のものに追加",
+    "items_for_sale": "売却アイテム",
+    "items_for_exchange": "交換アイテム",
+    "items_count": "{{count}} アイテム",
+    "loading_inventory": "インベントリ読み込み中...",
+    "inventory_error": "インベントリ読み込みエラー",
+    "try_again": "再試行",
+    "no_items_to_sell": "売却するアイテムがありません",
+    "no_items_in_inventory": "インベントリにアイテムがありません",
+    "open_cases_to_sell": "ケースを開いて売却アイテムを獲得してください",
+    "change_filters_or_open_cases": "フィルターを変更するかケースを開いてください",
+    "item_price": "価格：",
+    "item_sell_price": "売却：",
+    "item_subscription_days": "ステータス：",
+    "days_few": "少",
+    "sell_for": "💸 {{price}}₽で売却",
+    "selling": "売却中...",
+    "exchange_for": "⭐ {{days}}と交換",
+    "exchanging": "交換中...",
+    "too_cheap": "❌ 安すぎます",
+    "rarity_covert": "コバート",
+    "rarity_classified": "クラシファイド",
+    "rarity_restricted": "リストリクテッド",
+    "rarity_milspec": "ミルスペック",
+    "rarity_industrial": "インダストリアル",
+    "rarity_consumer": "コンシューマー",
+    "rarity_contraband": "コントラバンド"
+  },
+  "slots": {
+    "title": "スロットマシン",
+    "description": "同じアイテム3つを揃えて勝利",
+    "spin_cost": "スピン料金",
+    "your_balance": "残高",
+    "play_button": "プレイ (10 ₽)",
+    "spinning": "スピン中...",
+    "loading_items": "アイテム読み込み中...",
+    "preparing_game": "ゲーム準備中",
+    "loading_error": "読み込みエラー",
+    "failed_to_load": "ゲームデータの読み込みに失敗",
+    "reload": "再読み込み",
+    "congratulations_jackpot": "おめでとうございます！ジャックポット！",
+    "winning_item": "勝利アイテム：",
+    "item_value": "価値：",
+    "no_luck": "運がありませんでした",
+    "try_again": "もう一度挑戦！",
+    "result": "結果：",
+    "empty": "空",
+    "insufficient_funds": "プレイするための資金が不足",
+    "please_login": "プレイするにはログインしてください",
+    "loading_items_status": "アイテム読み込み中...",
+    "game_result_congratulations": "🎉 おめでとうございます！{{itemName}}を獲得しました！",
+    "game_result_no_luck": "😔 今回は運がありませんでした",
+    "connection_error": "サーバー接続エラー",
+    "unknown_error": "何かが間違っています"
+  },
+  "leaderboard_page": {
+    "title": "リーダーボード",
+    "cases_opened_tab": "開封ケース",
+    "cases_opened_description": "開封ケース数によるトッププレイヤー",
+    "level_tab": "レベル",
+    "level_description": "レベルと経験値によるトッププレイヤー",
+    "best_drop_tab": "最高ドロップ",
+    "best_drop_description": "最も高価なアイテムによるトッププレイヤー",
+    "auth_required": "認証が必要",
+    "leaderboard_error": "リーダーボード読み込みエラー",
+    "data_error": "データ読み込みエラー",
+    "loading_data": "データ読み込み中...",
+    "no_data": "表示するデータがありません",
+    "rank": "順位",
+    "player": "プレイヤー",
+    "score_label": "スコア",
+    "level_label": "レベル",
+    "cases_opened_label": "開封ケース",
+    "most_expensive_item_label": "最高額アイテム",
+    "level_prefix": "レベル {{level}}"
+  },
+  "case_preview_modal": {
+    "free_case": "無料ケース",
+    "loading_items": "アイテム読み込み中...",
+    "loading_error": "アイテム読み込みエラー",
+    "no_items": "アイテムが見つかりません",
+    "close": "閉じる",
+    "payment_method": "支払い方法：",
+    "balance_payment": "残高",
+    "card_payment": "銀行カード",
+    "buy": "購入",
+    "open": "開く",
+    "buy_and_open": "購入して開く",
+    "open_case": "ケースを開く",
+    "buying": "購入中...",
+    "opening": "開封中...",
+    "going_to_payment": "支払いへ...",
+    "no_image": "画像なし",
+    "already_received": "✓ 既に受領",
+    "chance": "確率：",
+    "bonus": "ボーナス",
+    "received": "✓ 受領！",
+    "subscription_required": "ステータスレベル {{tier}}+ が必要",
+    "your_level": "あなたのレベル：{{level}}"
+  },
+  "tic_tac_toe": {
+    "title": "三目並べ",
+    "description": "三目並べをプレイしてコインを獲得！",
+    "bet_amount": "ベット額：",
+    "your_turn": "あなたのターン",
+    "computer_turn": "コンピューターのターン",
+    "you_win": "勝利！",
+    "you_lose": "敗北！",
+    "draw": "引き分け！",
+    "play_again": "もう一度プレイ",
+    "start_game": "ゲーム開始",
+    "insufficient_balance": "残高不足",
+    "game_rules": "ゲームルール",
+    "rule_1": "ベットしてゲームを開始",
+    "rule_2": "3つのシンボルを一列に揃えて勝利",
+    "rule_3": "勝利してベット額の2倍を獲得",
+    "rule_4": "敗北または引き分けでベット額を失う"
+  },
+  "modal": {
+    "confirm": "確認",
+    "cancel": "キャンセル",
+    "close": "閉じる",
+    "save": "保存",
+    "delete": "削除",
+    "loading": "読み込み中...",
+    "error": "エラー",
+    "success": "成功",
+    "warning": "警告",
+    "info": "情報"
+  },
+  "registration_success_modal": {
+    "title": "登録完了！",
+    "welcome": "ChiBoxへようこそ！",
+    "account_created": "アカウントが正常に作成されました",
+    "getting_started": "次のステップ：",
+    "step_1": "最初の無料ケースを開く",
+    "step_2": "インベントリのアイテムを探索",
+    "step_3": "ボーナスのためのステータス取得を検討",
+    "step_4": "ゲームやコンペティションに参加",
+    "start_playing": "プレイ開始",
+    "bonus_received": "スタートボーナスを受け取りました！"
+  },
+  "notifications_header": {
+    "title": "通知",
+    "no_notifications": "新しい通知はありません",
+    "mark_all_read": "すべて既読にする",
+    "loading": "通知読み込み中...",
+    "error": "通知読み込みエラー",
+    "case_opened": "ケース開封",
+    "item_received": "アイテム受領",
+    "achievement_unlocked": "実績解除",
+    "subscription_reminder": "サブスクリプションリマインダー",
+    "bonus_available": "ボーナス利用可能"
+  },
+  "live_drops": {
+    "title": "🔥 最新ドロップ",
+    "player_won": "{{player}} が獲得",
+    "just_now": "たった今",
+    "minutes_ago": "{{minutes}} 分前",
+    "hour_ago": "1時間前",
+    "hours_ago": "{{hours}} 時間前",
+    "no_drops": "まだドロップなし",
+    "loading_drops": "ドロップ読み込み中..."
+  },
+  "banner": {
+    "daily_bonus": "デイリーボーナス",
+    "claim_bonus": "ボーナス取得",
+    "bonus_claimed": "ボーナス取得済み",
+    "next_bonus_in": "次のボーナスまで：",
+    "welcome_bonus": "ウェルカムボーナス",
+    "subscription_offer": "特別オファー",
+    "limited_time": "期間限定",
+    "get_status": "ステータス取得"
+  }
+}
