--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -1,177 +1,379 @@
 {
-   "common": {
-     "loading": "로딩 중...",
-     "error": "오류",
-     "success": "성공",
-     "cancel": "취소",
-     "confirm": "확인",
-     "save": "저장",
-     "delete": "삭제",
-     "edit": "편집",
-     "back": "뒤로",
-     "next": "다음",
-     "close": "닫기",
-     "open": "열기",
-     "play": "플레이",
-     "daily": "매일",
-     "online": "온라인: {{count}}",
-     "balance": "잔액"
-   },
-   "header": {
-     "home": "홈",
-     "cases": "케이스",
-     "profile": "프로필",
-     "leaderboard": "리더보드",
-     "inventory": "인벤토리",
-     "exchange": "교환",
-     "slots": "슬롯",
-     "login": "로그인",
-     "register": "회원가입",
-     "logout": "로그아웃",
-     "notifications": "알림"
-   },
-   "auth": {
-     "login_title": "로그인",
-     "register_title": "계정 생성",
-     "username": "사용자명",
-     "email": "이메일",
-     "password": "비밀번호",
-     "confirm_password": "비밀번호 확인",
-     "remember_me": "로그인 상태 유지",
-     "forgot_password": "비밀번호를 잊으셨나요?",
-     "no_account": "계정이 없으신가요?",
-     "have_account": "이미 계정이 있으신가요?",
-     "steam_login": "Steam으로 로그인",
-     "login_success": "로그인 성공",
-     "register_success": "회원가입 성공",
-     "invalid_credentials": "잘못된 인증 정보",
-     "email_verification": "이메일 인증"
-   },
-   "cases": {
-     "title": "케이스",
-     "premium_case": "프리미엄 케이스",
-     "daily_case": "일일 케이스",
-     "bonus_case": "보너스 케이스",
-     "buy_case": "케이스 구매",
-     "open_case": "케이스 열기",
-     "case_opened": "케이스가 열렸습니다!",
-     "congratulations": "축하합니다!",
-     "you_won": "획득한 아이템:",
-     "next_case_in": "다음 케이스까지:",
-     "available_in": "사용 가능까지:",
-     "case_preview": "케이스 미리보기",
-     "case_contents": "케이스 내용물",
-     "drop_rate": "드롭률"
-   },
-   "profile": {
-     "title": "프로필",
-     "statistics": "통계",
-     "achievements": "업적",
-     "transactions": "거래 내역",
-     "settings": "설정",
-     "level": "레벨",
-     "experience": "경험치",
-     "cases_opened": "열린 케이스",
-     "total_spent": "총 지출",
-     "total_won": "총 획득",
-     "winnings": "상금",
-     "subscription": "구독",
-     "subscription_active": "구독 활성",
-     "subscription_expires": "구독 만료",
-     "subscription_days_left": "남은 일수: {{days}}",
-     "steam_profile": "Steam 프로필",
-     "trade_url": "트레이드 URL"
-   },
-   "inventory": {
-     "title": "인벤토리",
-     "your_items": "보유 아이템",
-     "no_items": "아직 아이템이 없습니다",
-     "sell_item": "아이템 판매",
-     "withdraw_item": "아이템 출금",
-     "item_sold": "아이템이 판매되었습니다",
-     "item_withdrawn": "아이템이 출금되었습니다",
-     "rarity": "희귀도",
-     "price": "가격",
-     "value": "가치"
-   },
-   "leaderboard": {
-     "title": "플레이어 순위",
-     "top_players": "상위 플레이어",
-     "rank": "순위",
-     "player": "플레이어",
-     "total_winnings": "총 상금",
-     "cases_opened_count": "열린 케이스 수",
-     "win_rate": "승률"
-   },
-   "games": {
-     "slots": "슬롯",
-     "roulette": "룰렛",
-     "tic_tac_toe": "틱택토",
-     "play_now": "지금 플레이",
-     "bet_amount": "베팅 금액",
-     "spin": "스핀",
-     "place_bet": "베팅하기",
-     "game_result": "게임 결과",
-     "you_win": "승리!",
-     "you_lose": "패배",
-     "jackpot": "잭팟!",
-     "bonus_game": "보너스 게임",
-     "mini_game": "미니 게임"
-   },
-   "payment": {
-     "deposit": "입금",
-     "withdraw": "출금",
-     "amount": "금액",
-     "payment_method": "결제 방법",
-     "card": "신용카드",
-     "crypto": "암호화폐",
-     "steam_wallet": "Steam 지갑",
-     "minimum_deposit": "최소 입금액",
-     "maximum_deposit": "최대 입금액",
-     "processing": "결제 처리 중...",
-     "success": "결제 성공",
-     "failed": "결제 실패"
-   },
-   "notifications": {
-     "no_notifications": "알림이 없습니다",
-     "mark_all_read": "모두 읽음으로 표시",
-     "case_won": "케이스 승리",
-     "achievement_unlocked": "업적 해제",
-     "bonus_available": "보너스 사용 가능",
-     "subscription_expiring": "구독 만료 예정",
-     "new_items": "새 아이템 추가됨"
-   },
-   "language": {
-     "title": "언어",
-     "select_language": "언어 선택",
-     "russian": "Русский",
-     "english": "English",
-     "chinese": "中文",
-     "spanish": "Español",
-     "french": "Français",
-     "german": "Deutsch",
-     "japanese": "日本語",
-     "korean": "한국어"
-   },
-   "errors": {
-     "network_error": "네트워크 오류",
-     "server_error": "서버 오류",
-     "not_found": "찾을 수 없음",
-     "access_denied": "접근 거부",
-     "insufficient_balance": "잔액 부족",
-     "invalid_trade_url": "잘못된 트레이드 URL",
-     "case_not_available": "케이스 사용 불가",
-     "rate_limit": "요청 횟수 초과"
-   },
-   "time": {
-     "seconds": "초",
-     "minutes": "분",
-     "hours": "시간",
-     "days": "일",
-     "second": "초",
-     "minute": "분",
-     "hour": "시간",
-     "day": "일"
-   }
- }
- 
+  "common": {
+    "loading": "로딩 중...",
+    "error": "오류",
+    "success": "성공",
+    "cancel": "취소",
+    "confirm": "확인",
+    "save": "저장",
+    "delete": "삭제",
+    "edit": "편집",
+    "back": "뒤로",
+    "next": "다음",
+    "close": "닫기",
+    "open": "열기",
+    "play": "플레이",
+    "daily": "매일",
+    "online": "온라인: {{count}}",
+    "balance": "잔액"
+  },
+  "header": {
+    "home": "홈",
+    "cases": "케이스",
+    "profile": "프로필",
+    "leaderboard": "리더보드",
+    "inventory": "인벤토리",
+    "exchange": "교환",
+    "slots": "슬롯",
+    "login": "로그인",
+    "register": "회원가입",
+    "logout": "로그아웃",
+    "notifications": "알림"
+  },
+  "auth": {
+    "login_title": "로그인",
+    "register_title": "계정 생성",
+    "username": "사용자명",
+    "email": "이메일",
+    "password": "비밀번호",
+    "confirm_password": "비밀번호 확인",
+    "remember_me": "로그인 상태 유지",
+    "forgot_password": "비밀번호를 잊으셨나요?",
+    "no_account": "계정이 없으신가요?",
+    "have_account": "이미 계정이 있으신가요?",
+    "steam_login": "Steam으로 로그인",
+    "login_success": "로그인 성공",
+    "register_success": "회원가입 성공",
+    "invalid_credentials": "잘못된 인증 정보",
+    "email_verification": "이메일 인증"
+  },
+  "cases": {
+    "title": "케이스",
+    "premium_case": "프리미엄 케이스",
+    "daily_case": "일일 케이스",
+    "bonus_case": "보너스 케이스",
+    "buy_case": "케이스 구매",
+    "open_case": "케이스 열기",
+    "case_opened": "케이스 열림!",
+    "congratulations": "축하합니다!",
+    "you_won": "획득한 아이템:",
+    "next_case_in": "다음 케이스까지:",
+    "available_in": "사용 가능까지:",
+    "case_preview": "케이스 미리보기",
+    "case_contents": "케이스 내용물",
+    "drop_rate": "드롭률"
+  },
+  "profile": {
+    "title": "프로필",
+    "statistics": "통계",
+    "achievements": "업적",
+    "transactions": "거래 내역",
+    "settings": "설정",
+    "level": "레벨",
+    "experience": "경험치",
+    "cases_opened": "열린 케이스",
+    "total_spent": "총 지출",
+    "total_won": "총 획득",
+    "winnings": "상금",
+    "subscription": "구독",
+    "subscription_active": "구독 활성",
+    "subscription_expires": "구독 만료",
+    "subscription_days_left": "남은 일수: {{days}}",
+    "steam_profile": "Steam 프로필",
+    "trade_url": "거래 URL"
+  },
+  "inventory": {
+    "title": "인벤토리",
+    "your_items": "보유 아이템",
+    "no_items": "아이템이 없습니다",
+    "sell_item": "아이템 판매",
+    "withdraw_item": "아이템 출금",
+    "item_sold": "아이템 판매됨",
+    "item_withdrawn": "아이템 출금됨",
+    "rarity": "희귀도",
+    "price": "가격",
+    "value": "가치"
+  },
+  "leaderboard": {
+    "title": "플레이어 순위",
+    "top_players": "상위 플레이어",
+    "rank": "순위",
+    "player": "플레이어",
+    "total_winnings": "총 상금",
+    "cases_opened_count": "열린 케이스 수",
+    "win_rate": "승률"
+  },
+  "games": {
+    "slots": "슬롯",
+    "roulette": "룰렛",
+    "tic_tac_toe": "틱택토",
+    "play_now": "지금 플레이",
+    "bet_amount": "베팅 금액",
+    "spin": "스핀",
+    "place_bet": "베팅하기",
+    "game_result": "게임 결과",
+    "you_win": "승리!",
+    "you_lose": "패배",
+    "jackpot": "잭팟!",
+    "bonus_game": "보너스 게임",
+    "mini_game": "미니 게임"
+  },
+  "payment": {
+    "deposit": "입금",
+    "withdraw": "출금",
+    "amount": "금액",
+    "payment_method": "결제 방법",
+    "card": "신용카드",
+    "crypto": "암호화폐",
+    "steam_wallet": "Steam 지갑",
+    "minimum_deposit": "최소 입금액",
+    "maximum_deposit": "최대 입금액",
+    "processing": "결제 처리 중...",
+    "success": "결제 성공",
+    "failed": "결제 실패"
+  },
+  "notifications": {
+    "no_notifications": "알림 없음",
+    "mark_all_read": "모두 읽음으로 표시",
+    "case_won": "케이스 승리",
+    "achievement_unlocked": "업적 잠금 해제",
+    "bonus_available": "보너스 사용 가능",
+    "subscription_expiring": "구독 만료 예정",
+    "new_items": "새 아이템 추가됨"
+  },
+  "language": {
+    "title": "언어",
+    "select_language": "언어 선택",
+    "russian": "Русский",
+    "english": "English",
+    "chinese": "中文",
+    "spanish": "Español",
+    "french": "Français",
+    "german": "Deutsch",
+    "japanese": "日本語",
+    "korean": "한국어"
+  },
+  "errors": {
+    "network_error": "네트워크 오류",
+    "server_error": "서버 오류",
+    "not_found": "찾을 수 없음",
+    "access_denied": "접근 거부",
+    "insufficient_balance": "잔액 부족",
+    "invalid_trade_url": "잘못된 거래 URL",
+    "case_not_available": "케이스 사용 불가",
+    "rate_limit": "요청 횟수 초과"
+  },
+  "time": {
+    "seconds": "초",
+    "minutes": "분",
+    "hours": "시간",
+    "days": "일",
+    "second": "초",
+    "minute": "분",
+    "hour": "시간",
+    "day": "일"
+  },
+  "exchange": {
+    "title": "아이템 교환",
+    "subtitle": "판매 • 교환 • 상태 획득",
+    "balance": "잔액",
+    "status": "상태",
+    "no_status": "없음",
+    "exchange_rate": "환율",
+    "tier": "티어 {{tier}}",
+    "sell_mode": "💰 판매",
+    "exchange_mode": "⭐ 교환",
+    "search_placeholder": "🔍 아이템 검색...",
+    "all_rarities": "모든 희귀도",
+    "show_info": "▶ 가격 정보 표시",
+    "hide_info": "▼ 정보 숨기기",
+    "exchange_rates_title": "교환 비율",
+    "exchange_rates_description": "상세한 가격 및 교환 조건",
+    "tier_1_title": "티어 1 (상태)",
+    "tier_1_price": "150₽/일",
+    "tier_1_description": "기본 구독",
+    "tier_2_title": "티어 2 (상태+)",
+    "tier_2_price": "150₽/일",
+    "tier_2_description": "향상된 구독",
+    "tier_3_title": "티어 3 (상태++)",
+    "tier_3_price": "300₽/일",
+    "tier_3_description": "프리미엄 구독",
+    "important_conditions": "중요한 조건:",
+    "min_exchange_price": "교환 가능한 최소 아이템 가치: {{price}}₽",
+    "sell_percentage": "판매 시 아이템 가치의 70% 획득",
+    "no_returns": "교환된 아이템은 반품 불가",
+    "days_accumulate": "구독 일수는 현재 일수에 누적",
+    "items_for_sale": "판매용 아이템",
+    "items_for_exchange": "교환용 아이템",
+    "items_count": "{{count}}개 아이템",
+    "loading_inventory": "인벤토리 로딩 중...",
+    "inventory_error": "인벤토리 로딩 오류",
+    "try_again": "다시 시도",
+    "no_items_to_sell": "판매할 아이템 없음",
+    "no_items_in_inventory": "인벤토리에 아이템 없음",
+    "open_cases_to_sell": "케이스를 열어 판매용 아이템을 획득하세요",
+    "change_filters_or_open_cases": "필터를 변경하거나 케이스를 여세요",
+    "item_price": "가격:",
+    "item_sell_price": "판매:",
+    "item_subscription_days": "상태:",
+    "days_few": "적음",
+    "sell_for": "💸 {{price}}₽에 판매",
+    "selling": "판매 중...",
+    "exchange_for": "⭐ {{days}}로 교환",
+    "exchanging": "교환 중...",
+    "too_cheap": "❌ 너무 저렴함",
+    "rarity_covert": "은밀",
+    "rarity_classified": "기밀",
+    "rarity_restricted": "제한",
+    "rarity_milspec": "군용 규격",
+    "rarity_industrial": "산업용",
+    "rarity_consumer": "소비자용",
+    "rarity_contraband": "밀수품"
+  },
+  "slots": {
+    "title": "슬롯머신",
+    "description": "동일한 아이템 3개를 맞춰 승리하세요",
+    "spin_cost": "스핀 비용",
+    "your_balance": "보유 잔액",
+    "play_button": "플레이 (10 ₽)",
+    "spinning": "스핀 중...",
+    "loading_items": "아이템 로딩 중...",
+    "preparing_game": "게임 준비 중",
+    "loading_error": "로딩 오류",
+    "failed_to_load": "게임 데이터 로딩 실패",
+    "reload": "새로고침",
+    "congratulations_jackpot": "축하합니다! 잭팟!",
+    "winning_item": "당첨 아이템:",
+    "item_value": "가치:",
+    "no_luck": "운이 없었습니다",
+    "try_again": "다시 시도하세요!",
+    "result": "결과:",
+    "empty": "비어있음",
+    "insufficient_funds": "플레이할 자금 부족",
+    "please_login": "플레이하려면 로그인하세요",
+    "loading_items_status": "아이템 로딩 중...",
+    "game_result_congratulations": "🎉 축하합니다! {{itemName}}을(를) 획득했습니다!",
+    "game_result_no_luck": "😔 이번엔 운이 없었네요",
+    "connection_error": "서버 연결 오류",
+    "unknown_error": "문제가 발생했습니다"
+  },
+  "leaderboard_page": {
+    "title": "리더보드",
+    "cases_opened_tab": "열린 케이스",
+    "cases_opened_description": "열린 케이스 수 기준 상위 플레이어",
+    "level_tab": "레벨",
+    "level_description": "레벨과 경험치 기준 상위 플레이어",
+    "best_drop_tab": "최고 드롭",
+    "best_drop_description": "가장 비싼 아이템 기준 상위 플레이어",
+    "auth_required": "인증 필요",
+    "leaderboard_error": "리더보드 로딩 오류",
+    "data_error": "데이터 로딩 오류",
+    "loading_data": "데이터 로딩 중...",
+    "no_data": "표시할 데이터 없음",
+    "rank": "순위",
+    "player": "플레이어",
+    "score_label": "점수",
+    "level_label": "레벨",
+    "cases_opened_label": "열린 케이스",
+    "most_expensive_item_label": "가장 비싼 아이템",
+    "level_prefix": "레벨 {{level}}"
+  },
+  "case_preview_modal": {
+    "free_case": "무료 케이스",
+    "loading_items": "아이템 로딩 중...",
+    "loading_error": "아이템 로딩 오류",
+    "no_items": "아이템을 찾을 수 없음",
+    "close": "닫기",
+    "payment_method": "결제:",
+    "balance_payment": "잔액",
+    "card_payment": "은행 카드",
+    "buy": "구매",
+    "open": "열기",
+    "buy_and_open": "구매하고 열기",
+    "open_case": "케이스 열기",
+    "buying": "구매 중...",
+    "opening": "열기 중...",
+    "going_to_payment": "결제로 이동...",
+    "no_image": "이미지 없음",
+    "already_received": "✓ 이미 받음",
+    "chance": "확률:",
+    "bonus": "보너스",
+    "received": "✓ 받음!",
+    "subscription_required": "상태 레벨 {{tier}}+ 필요",
+    "your_level": "당신의 레벨: {{level}}"
+  },
+  "tic_tac_toe": {
+    "title": "틱택토",
+    "description": "틱택토를 플레이하고 코인을 획득하세요!",
+    "bet_amount": "베팅 금액:",
+    "your_turn": "당신의 차례",
+    "computer_turn": "컴퓨터의 차례",
+    "you_win": "승리!",
+    "you_lose": "패배!",
+    "draw": "무승부!",
+    "play_again": "다시 플레이",
+    "start_game": "게임 시작",
+    "insufficient_balance": "잔액 부족",
+    "game_rules": "게임 규칙",
+    "rule_1": "베팅하고 게임을 시작하세요",
+    "rule_2": "3개의 기호를 한 줄로 맞춰 승리하세요",
+    "rule_3": "승리하면 베팅액의 2배를 획득",
+    "rule_4": "패배하거나 무승부 시 베팅액 상실"
+  },
+  "modal": {
+    "confirm": "확인",
+    "cancel": "취소",
+    "close": "닫기",
+    "save": "저장",
+    "delete": "삭제",
+    "loading": "로딩 중...",
+    "error": "오류",
+    "success": "성공",
+    "warning": "경고",
+    "info": "정보"
+  },
+  "registration_success_modal": {
+    "title": "회원가입 완료!",
+    "welcome": "ChiBox에 오신 것을 환영합니다!",
+    "account_created": "계정이 성공적으로 생성되었습니다",
+    "getting_started": "다음 단계:",
+    "step_1": "첫 번째 무료 케이스 열기",
+    "step_2": "인벤토리의 아이템 탐색",
+    "step_3": "보너스를 위한 상태 획득 고려",
+    "step_4": "게임과 경쟁에 참여",
+    "start_playing": "플레이 시작",
+    "bonus_received": "시작 보너스를 받았습니다!"
+  },
+  "notifications_header": {
+    "title": "알림",
+    "no_notifications": "새 알림 없음",
+    "mark_all_read": "모두 읽음으로 표시",
+    "loading": "알림 로딩 중...",
+    "error": "알림 로딩 오류",
+    "case_opened": "케이스 열림",
+    "item_received": "아이템 받음",
+    "achievement_unlocked": "업적 잠금 해제",
+    "subscription_reminder": "구독 알림",
+    "bonus_available": "보너스 사용 가능"
+  },
+  "live_drops": {
+    "title": "🔥 최신 드롭",
+    "player_won": "{{player}}님이 획득",
+    "just_now": "방금 전",
+    "minutes_ago": "{{minutes}}분 전",
+    "hour_ago": "1시간 전",
+    "hours_ago": "{{hours}}시간 전",
+    "no_drops": "아직 드롭 없음",
+    "loading_drops": "드롭 로딩 중..."
+  },
+  "banner": {
+    "daily_bonus": "일일 보너스",
+    "claim_bonus": "보너스 받기",
+    "bonus_claimed": "보너스 받음",
+    "next_bonus_in": "다음 보너스까지:",
+    "welcome_bonus": "환영 보너스",
+    "subscription_offer": "특별 제안",
+    "limited_time": "한정 시간",
+    "get_status": "상태 획득"
+  }
+}
