--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -1,177 +1,379 @@
 {
-   "common": {
-     "loading": "加载中...",
-     "error": "错误",
-     "success": "成功",
-     "cancel": "取消",
-     "confirm": "确认",
-     "save": "保存",
-     "delete": "删除",
-     "edit": "编辑",
-     "back": "返回",
-     "next": "下一步",
-     "close": "关闭",
-     "open": "打开",
-     "play": "开始游戏",
-     "daily": "每日",
-     "online": "在线：{{count}}",
-     "balance": "余额"
-   },
-   "header": {
-     "home": "首页",
-     "cases": "箱子",
-     "profile": "个人资料",
-     "leaderboard": "排行榜",
-     "inventory": "背包",
-     "exchange": "交换",
-     "slots": "老虎机",
-     "login": "登录",
-     "register": "注册",
-     "logout": "退出",
-     "notifications": "通知"
-   },
-   "auth": {
-     "login_title": "登录账户",
-     "register_title": "创建账户",
-     "username": "用户名",
-     "email": "邮箱",
-     "password": "密码",
-     "confirm_password": "确认密码",
-     "remember_me": "记住我",
-     "forgot_password": "忘记密码？",
-     "no_account": "还没有账户？",
-     "have_account": "已有账户？",
-     "steam_login": "使用Steam登录",
-     "login_success": "登录成功",
-     "register_success": "注册成功",
-     "invalid_credentials": "登录凭据无效",
-     "email_verification": "邮箱验证"
-   },
-   "cases": {
-     "title": "箱子",
-     "premium_case": "高级箱子",
-     "daily_case": "每日箱子",
-     "bonus_case": "奖励箱子",
-     "buy_case": "购买箱子",
-     "open_case": "开启箱子",
-     "case_opened": "箱子已开启！",
-     "congratulations": "恭喜！",
-     "you_won": "您获得了：",
-     "next_case_in": "下一个箱子：",
-     "available_in": "可用时间：",
-     "case_preview": "箱子预览",
-     "case_contents": "箱子内容",
-     "drop_rate": "掉落率"
-   },
-   "profile": {
-     "title": "个人资料",
-     "statistics": "统计数据",
-     "achievements": "成就",
-     "transactions": "交易记录",
-     "settings": "设置",
-     "level": "等级",
-     "experience": "经验",
-     "cases_opened": "已开箱子",
-     "total_spent": "总消费",
-     "total_won": "总收入",
-     "winnings": "奖金",
-     "subscription": "订阅",
-     "subscription_active": "订阅有效",
-     "subscription_expires": "订阅到期",
-     "subscription_days_left": "剩余天数：{{days}}",
-     "steam_profile": "Steam资料",
-     "trade_url": "交易链接"
-   },
-   "inventory": {
-     "title": "背包",
-     "your_items": "您的物品",
-     "no_items": "您还没有任何物品",
-     "sell_item": "出售物品",
-     "withdraw_item": "提取物品",
-     "item_sold": "物品已出售",
-     "item_withdrawn": "物品已提取",
-     "rarity": "稀有度",
-     "price": "价格",
-     "value": "价值"
-   },
-   "leaderboard": {
-     "title": "玩家排行榜",
-     "top_players": "顶级玩家",
-     "rank": "排名",
-     "player": "玩家",
-     "total_winnings": "总奖金",
-     "cases_opened_count": "开箱数量",
-     "win_rate": "胜率"
-   },
-   "games": {
-     "slots": "老虎机",
-     "roulette": "轮盘",
-     "tic_tac_toe": "井字游戏",
-     "play_now": "立即游戏",
-     "bet_amount": "下注金额",
-     "spin": "旋转",
-     "place_bet": "下注",
-     "game_result": "游戏结果",
-     "you_win": "您获胜了！",
-     "you_lose": "您输了",
-     "jackpot": "大奖！",
-     "bonus_game": "奖励游戏",
-     "mini_game": "小游戏"
-   },
-   "payment": {
-     "deposit": "充值",
-     "withdraw": "提现",
-     "amount": "金额",
-     "payment_method": "支付方式",
-     "card": "银行卡",
-     "crypto": "加密货币",
-     "steam_wallet": "Steam钱包",
-     "minimum_deposit": "最低充值",
-     "maximum_deposit": "最高充值",
-     "processing": "支付处理中...",
-     "success": "支付成功",
-     "failed": "支付失败"
-   },
-   "notifications": {
-     "no_notifications": "没有通知",
-     "mark_all_read": "全部标记为已读",
-     "case_won": "箱子奖励",
-     "achievement_unlocked": "成就解锁",
-     "bonus_available": "奖励可用",
-     "subscription_expiring": "订阅即将到期",
-     "new_items": "添加了新物品"
-   },
-   "language": {
-     "title": "语言",
-     "select_language": "选择语言",
-     "russian": "Русский",
-     "english": "English",
-     "chinese": "中文",
-     "spanish": "Español",
-     "french": "Français",
-     "german": "Deutsch",
-     "japanese": "日本語",
-     "korean": "한국어"
-   },
-   "errors": {
-     "network_error": "网络错误",
-     "server_error": "服务器错误",
-     "not_found": "未找到",
-     "access_denied": "访问被拒绝",
-     "insufficient_balance": "余额不足",
-     "invalid_trade_url": "无效的交易链接",
-     "case_not_available": "箱子不可用",
-     "rate_limit": "请求过多"
-   },
-   "time": {
-     "seconds": "秒",
-     "minutes": "分钟",
-     "hours": "小时",
-     "days": "天",
-     "second": "秒",
-     "minute": "分钟",
-     "hour": "小时",
-     "day": "天"
-   }
- }
- 
+  "common": {
+    "loading": "加载中...",
+    "error": "错误",
+    "success": "成功",
+    "cancel": "取消",
+    "confirm": "确认",
+    "save": "保存",
+    "delete": "删除",
+    "edit": "编辑",
+    "back": "返回",
+    "next": "下一步",
+    "close": "关闭",
+    "open": "打开",
+    "play": "开始游戏",
+    "daily": "每日",
+    "online": "在线：{{count}}",
+    "balance": "余额"
+  },
+  "header": {
+    "home": "首页",
+    "cases": "箱子",
+    "profile": "个人资料",
+    "leaderboard": "排行榜",
+    "inventory": "背包",
+    "exchange": "交换",
+    "slots": "老虎机",
+    "login": "登录",
+    "register": "注册",
+    "logout": "退出",
+    "notifications": "通知"
+  },
+  "auth": {
+    "login_title": "登录账户",
+    "register_title": "创建账户",
+    "username": "用户名",
+    "email": "邮箱",
+    "password": "密码",
+    "confirm_password": "确认密码",
+    "remember_me": "记住我",
+    "forgot_password": "忘记密码？",
+    "no_account": "还没有账户？",
+    "have_account": "已有账户？",
+    "steam_login": "使用Steam登录",
+    "login_success": "登录成功",
+    "register_success": "注册成功",
+    "invalid_credentials": "登录凭据无效",
+    "email_verification": "邮箱验证"
+  },
+  "cases": {
+    "title": "箱子",
+    "premium_case": "高级箱子",
+    "daily_case": "每日箱子",
+    "bonus_case": "奖励箱子",
+    "buy_case": "购买箱子",
+    "open_case": "开启箱子",
+    "case_opened": "箱子已开启！",
+    "congratulations": "恭喜！",
+    "you_won": "您获得了：",
+    "next_case_in": "下一个箱子：",
+    "available_in": "可用时间：",
+    "case_preview": "箱子预览",
+    "case_contents": "箱子内容",
+    "drop_rate": "掉落率"
+  },
+  "profile": {
+    "title": "个人资料",
+    "statistics": "统计数据",
+    "achievements": "成就",
+    "transactions": "交易记录",
+    "settings": "设置",
+    "level": "等级",
+    "experience": "经验",
+    "cases_opened": "已开箱子",
+    "total_spent": "总消费",
+    "total_won": "总收入",
+    "winnings": "奖金",
+    "subscription": "订阅",
+    "subscription_active": "订阅有效",
+    "subscription_expires": "订阅到期",
+    "subscription_days_left": "剩余天数：{{days}}",
+    "steam_profile": "Steam资料",
+    "trade_url": "交易链接"
+  },
+  "inventory": {
+    "title": "背包",
+    "your_items": "您的物品",
+    "no_items": "您还没有任何物品",
+    "sell_item": "出售物品",
+    "withdraw_item": "提取物品",
+    "item_sold": "物品已出售",
+    "item_withdrawn": "物品已提取",
+    "rarity": "稀有度",
+    "price": "价格",
+    "value": "价值"
+  },
+  "leaderboard": {
+    "title": "玩家排行榜",
+    "top_players": "顶级玩家",
+    "rank": "排名",
+    "player": "玩家",
+    "total_winnings": "总奖金",
+    "cases_opened_count": "开箱数量",
+    "win_rate": "胜率"
+  },
+  "games": {
+    "slots": "老虎机",
+    "roulette": "轮盘",
+    "tic_tac_toe": "井字游戏",
+    "play_now": "立即游戏",
+    "bet_amount": "下注金额",
+    "spin": "旋转",
+    "place_bet": "下注",
+    "game_result": "游戏结果",
+    "you_win": "您获胜了！",
+    "you_lose": "您输了",
+    "jackpot": "大奖！",
+    "bonus_game": "奖励游戏",
+    "mini_game": "小游戏"
+  },
+  "payment": {
+    "deposit": "充值",
+    "withdraw": "提现",
+    "amount": "金额",
+    "payment_method": "支付方式",
+    "card": "银行卡",
+    "crypto": "加密货币",
+    "steam_wallet": "Steam钱包",
+    "minimum_deposit": "最低充值",
+    "maximum_deposit": "最高充值",
+    "processing": "支付处理中...",
+    "success": "支付成功",
+    "failed": "支付失败"
+  },
+  "notifications": {
+    "no_notifications": "没有通知",
+    "mark_all_read": "全部标记为已读",
+    "case_won": "箱子奖励",
+    "achievement_unlocked": "成就解锁",
+    "bonus_available": "奖励可用",
+    "subscription_expiring": "订阅即将到期",
+    "new_items": "添加了新物品"
+  },
+  "language": {
+    "title": "语言",
+    "select_language": "选择语言",
+    "russian": "Русский",
+    "english": "English",
+    "chinese": "中文",
+    "spanish": "Español",
+    "french": "Français",
+    "german": "Deutsch",
+    "japanese": "日本語",
+    "korean": "한국어"
+  },
+  "errors": {
+    "network_error": "网络错误",
+    "server_error": "服务器错误",
+    "not_found": "未找到",
+    "access_denied": "访问被拒绝",
+    "insufficient_balance": "余额不足",
+    "invalid_trade_url": "无效的交易链接",
+    "case_not_available": "箱子不可用",
+    "rate_limit": "请求过多"
+  },
+  "time": {
+    "seconds": "秒",
+    "minutes": "分钟",
+    "hours": "小时",
+    "days": "天",
+    "second": "秒",
+    "minute": "分钟",
+    "hour": "小时",
+    "day": "天"
+  },
+  "exchange": {
+    "title": "物品交换",
+    "subtitle": "出售 • 交换 • 获得状态",
+    "balance": "余额",
+    "status": "状态",
+    "no_status": "无",
+    "exchange_rate": "汇率",
+    "tier": "等级 {{tier}}",
+    "sell_mode": "💰 出售",
+    "exchange_mode": "⭐ 交换",
+    "search_placeholder": "🔍 搜索物品...",
+    "all_rarities": "所有稀有度",
+    "show_info": "▶ 显示价格信息",
+    "hide_info": "▼ 隐藏信息",
+    "exchange_rates_title": "交换率",
+    "exchange_rates_description": "详细价格和交换条件",
+    "tier_1_title": "等级 1 (状态)",
+    "tier_1_price": "150₽/天",
+    "tier_1_description": "基础订阅",
+    "tier_2_title": "等级 2 (状态+)",
+    "tier_2_price": "150₽/天",
+    "tier_2_description": "增强订阅",
+    "tier_3_title": "等级 3 (状态++)",
+    "tier_3_price": "300₽/天",
+    "tier_3_description": "高级订阅",
+    "important_conditions": "重要条件：",
+    "min_exchange_price": "交换最低物品价值：{{price}}₽",
+    "sell_percentage": "出售时您将获得物品价值的70%",
+    "no_returns": "已交换的物品无法退回",
+    "days_accumulate": "订阅天数与当前天数累计",
+    "items_for_sale": "待售物品",
+    "items_for_exchange": "待交换物品",
+    "items_count": "{{count}} 个物品",
+    "loading_inventory": "加载背包中...",
+    "inventory_error": "背包加载错误",
+    "try_again": "重试",
+    "no_items_to_sell": "没有物品可出售",
+    "no_items_in_inventory": "背包中没有物品",
+    "open_cases_to_sell": "尝试开箱获得可出售的物品",
+    "change_filters_or_open_cases": "尝试更改筛选条件或开箱",
+    "item_price": "价格：",
+    "item_sell_price": "出售：",
+    "item_subscription_days": "状态：",
+    "days_few": "少",
+    "sell_for": "💸 出售 {{price}}₽",
+    "selling": "出售中...",
+    "exchange_for": "⭐ 交换 {{days}}",
+    "exchanging": "交换中...",
+    "too_cheap": "❌ 太便宜",
+    "rarity_covert": "秘密",
+    "rarity_classified": "机密",
+    "rarity_restricted": "受限",
+    "rarity_milspec": "军规",
+    "rarity_industrial": "工业",
+    "rarity_consumer": "消费",
+    "rarity_contraband": "违禁"
+  },
+  "slots": {
+    "title": "老虎机",
+    "description": "获得3个相同物品即可获胜",
+    "spin_cost": "旋转费用",
+    "your_balance": "您的余额",
+    "play_button": "游戏 (10 ₽)",
+    "spinning": "旋转中...",
+    "loading_items": "加载物品中...",
+    "preparing_game": "准备游戏中",
+    "loading_error": "加载错误",
+    "failed_to_load": "加载游戏数据失败",
+    "reload": "重新加载",
+    "congratulations_jackpot": "恭喜！头奖！",
+    "winning_item": "获胜物品：",
+    "item_value": "价值：",
+    "no_luck": "运气不佳",
+    "try_again": "再试一次！",
+    "result": "结果：",
+    "empty": "空",
+    "insufficient_funds": "余额不足无法游戏",
+    "please_login": "请登录以游戏",
+    "loading_items_status": "加载物品中...",
+    "game_result_congratulations": "🎉 恭喜！您赢得了 {{itemName}}！",
+    "game_result_no_luck": "😔 这次运气不佳",
+    "connection_error": "服务器连接错误",
+    "unknown_error": "出现了问题"
+  },
+  "leaderboard_page": {
+    "title": "排行榜",
+    "cases_opened_tab": "开箱数",
+    "cases_opened_description": "按开箱数量排名的顶级玩家",
+    "level_tab": "等级",
+    "level_description": "按等级和经验排名的顶级玩家",
+    "best_drop_tab": "最佳掉落",
+    "best_drop_description": "按最贵物品排名的顶级玩家",
+    "auth_required": "需要授权",
+    "leaderboard_error": "排行榜加载错误",
+    "data_error": "数据加载错误",
+    "loading_data": "加载数据中...",
+    "no_data": "无数据显示",
+    "rank": "排名",
+    "player": "玩家",
+    "score_label": "分数",
+    "level_label": "等级",
+    "cases_opened_label": "开箱数",
+    "most_expensive_item_label": "最贵物品",
+    "level_prefix": "等级 {{level}}"
+  },
+  "case_preview_modal": {
+    "free_case": "免费箱子",
+    "loading_items": "加载物品中...",
+    "loading_error": "物品加载错误",
+    "no_items": "未找到物品",
+    "close": "关闭",
+    "payment_method": "支付方式：",
+    "balance_payment": "余额",
+    "card_payment": "银行卡",
+    "buy": "购买",
+    "open": "打开",
+    "buy_and_open": "购买并打开",
+    "open_case": "开箱",
+    "buying": "购买中...",
+    "opening": "开启中...",
+    "going_to_payment": "前往支付...",
+    "no_image": "无图片",
+    "already_received": "✓ 已获得",
+    "chance": "概率：",
+    "bonus": "奖励",
+    "received": "✓ 已获得！",
+    "subscription_required": "需要状态等级 {{tier}}+",
+    "your_level": "您的等级：{{level}}"
+  },
+  "tic_tac_toe": {
+    "title": "井字游戏",
+    "description": "玩井字游戏赢取金币！",
+    "bet_amount": "下注金额：",
+    "your_turn": "您的回合",
+    "computer_turn": "电脑回合",
+    "you_win": "您获胜！",
+    "you_lose": "您败北！",
+    "draw": "平局！",
+    "play_again": "再玩一次",
+    "start_game": "开始游戏",
+    "insufficient_balance": "余额不足",
+    "game_rules": "游戏规则",
+    "rule_1": "下注并开始游戏",
+    "rule_2": "连成3个符号即可获胜",
+    "rule_3": "获胜后获得双倍下注",
+    "rule_4": "失败或平局下注将失去"
+  },
+  "modal": {
+    "confirm": "确认",
+    "cancel": "取消",
+    "close": "关闭",
+    "save": "保存",
+    "delete": "删除",
+    "loading": "加载中...",
+    "error": "错误",
+    "success": "成功",
+    "warning": "警告",
+    "info": "信息"
+  },
+  "registration_success_modal": {
+    "title": "注册完成！",
+    "welcome": "欢迎来到ChiBox！",
+    "account_created": "您的账户已成功创建",
+    "getting_started": "下一步：",
+    "step_1": "打开您的第一个免费箱子",
+    "step_2": "探索背包中的物品",
+    "step_3": "考虑获得状态以获得奖励",
+    "step_4": "参与游戏和竞赛",
+    "start_playing": "开始游戏",
+    "bonus_received": "您获得了新手奖励！"
+  },
+  "notifications_header": {
+    "title": "通知",
+    "no_notifications": "没有新通知",
+    "mark_all_read": "全部标记为已读",
+    "loading": "加载通知中...",
+    "error": "通知加载错误",
+    "case_opened": "箱子已开启",
+    "item_received": "物品已获得",
+    "achievement_unlocked": "成就已解锁",
+    "subscription_reminder": "订阅提醒",
+    "bonus_available": "奖励可用"
+  },
+  "live_drops": {
+    "title": "🔥 最新掉落",
+    "player_won": "{{player}} 获得了",
+    "just_now": "刚刚",
+    "minutes_ago": "{{minutes}} 分钟前",
+    "hour_ago": "一小时前",
+    "hours_ago": "{{hours}} 小时前",
+    "no_drops": "暂无掉落",
+    "loading_drops": "加载掉落中..."
+  },
+  "banner": {
+    "daily_bonus": "每日奖励",
+    "claim_bonus": "领取奖励",
+    "bonus_claimed": "奖励已领取",
+    "next_bonus_in": "下次奖励：",
+    "welcome_bonus": "欢迎奖励",
+    "subscription_offer": "特别优惠",
+    "limited_time": "限时",
+    "get_status": "获得状态"
+  }
+}
