--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -1,177 +1,379 @@
 {
-   "common": {
-     "loading": "Chargement...",
-     "error": "Erreur",
-     "success": "Succès",
-     "cancel": "Annuler",
-     "confirm": "Confirmer",
-     "save": "Sauvegarder",
-     "delete": "Supprimer",
-     "edit": "Modifier",
-     "back": "Retour",
-     "next": "Suivant",
-     "close": "Fermer",
-     "open": "Ouvrir",
-     "play": "Jouer",
-     "daily": "quotidien",
-     "online": "En ligne : {{count}}",
-     "balance": "Solde"
-   },
-   "header": {
-     "home": "Accueil",
-     "cases": "Caisses",
-     "profile": "Profil",
-     "leaderboard": "Classement",
-     "inventory": "Inventaire",
-     "exchange": "Échange",
-     "slots": "Machines à sous",
-     "login": "Connexion",
-     "register": "S'inscrire",
-     "logout": "Déconnexion",
-     "notifications": "Notifications"
-   },
-   "auth": {
-     "login_title": "Se connecter",
-     "register_title": "Créer un compte",
-     "username": "Nom d'utilisateur",
-     "email": "Adresse e-mail",
-     "password": "Mot de passe",
-     "confirm_password": "Confirmer le mot de passe",
-     "remember_me": "Se souvenir de moi",
-     "forgot_password": "Mot de passe oublié ?",
-     "no_account": "Pas de compte ?",
-     "have_account": "Déjà un compte ?",
-     "steam_login": "Se connecter avec Steam",
-     "login_success": "Connexion réussie",
-     "register_success": "Inscription réussie",
-     "invalid_credentials": "Identifiants invalides",
-     "email_verification": "Vérification e-mail"
-   },
-   "cases": {
-     "title": "Caisses",
-     "premium_case": "Caisse Premium",
-     "daily_case": "Caisse Quotidienne",
-     "bonus_case": "Caisse Bonus",
-     "buy_case": "Acheter Caisse",
-     "open_case": "Ouvrir Caisse",
-     "case_opened": "Caisse Ouverte !",
-     "congratulations": "Félicitations !",
-     "you_won": "Vous avez gagné :",
-     "next_case_in": "Prochaine caisse dans :",
-     "available_in": "Disponible dans :",
-     "case_preview": "Aperçu de la caisse",
-     "case_contents": "Contenu de la caisse",
-     "drop_rate": "Taux de drop"
-   },
-   "profile": {
-     "title": "Profil",
-     "statistics": "Statistiques",
-     "achievements": "Succès",
-     "transactions": "Transactions",
-     "settings": "Paramètres",
-     "level": "Niveau",
-     "experience": "Expérience",
-     "cases_opened": "Caisses Ouvertes",
-     "total_spent": "Total Dépensé",
-     "total_won": "Total Gagné",
-     "winnings": "Gains",
-     "subscription": "Abonnement",
-     "subscription_active": "Abonnement Actif",
-     "subscription_expires": "Abonnement Expire",
-     "subscription_days_left": "Jours restants : {{days}}",
-     "steam_profile": "Profil Steam",
-     "trade_url": "URL d'échange"
-   },
-   "inventory": {
-     "title": "Inventaire",
-     "your_items": "Vos Objets",
-     "no_items": "Vous n'avez pas encore d'objets",
-     "sell_item": "Vendre Objet",
-     "withdraw_item": "Retirer Objet",
-     "item_sold": "Objet Vendu",
-     "item_withdrawn": "Objet Retiré",
-     "rarity": "Rareté",
-     "price": "Prix",
-     "value": "Valeur"
-   },
-   "leaderboard": {
-     "title": "Classement des Joueurs",
-     "top_players": "Meilleurs Joueurs",
-     "rank": "Rang",
-     "player": "Joueur",
-     "total_winnings": "Gains Totaux",
-     "cases_opened_count": "Caisses Ouvertes",
-     "win_rate": "Taux de Victoire"
-   },
-   "games": {
-     "slots": "Machines à sous",
-     "roulette": "Roulette",
-     "tic_tac_toe": "Morpion",
-     "play_now": "Jouer Maintenant",
-     "bet_amount": "Montant du Pari",
-     "spin": "Tourner",
-     "place_bet": "Placer Pari",
-     "game_result": "Résultat du Jeu",
-     "you_win": "Vous Gagnez !",
-     "you_lose": "Vous Perdez",
-     "jackpot": "Jackpot !",
-     "bonus_game": "Jeu Bonus",
-     "mini_game": "Mini Jeu"
-   },
-   "payment": {
-     "deposit": "Déposer",
-     "withdraw": "Retirer",
-     "amount": "Montant",
-     "payment_method": "Méthode de Paiement",
-     "card": "Carte de Crédit",
-     "crypto": "Cryptomonnaie",
-     "steam_wallet": "Portefeuille Steam",
-     "minimum_deposit": "Dépôt Minimum",
-     "maximum_deposit": "Dépôt Maximum",
-     "processing": "Traitement du paiement...",
-     "success": "Paiement réussi",
-     "failed": "Paiement échoué"
-   },
-   "notifications": {
-     "no_notifications": "Aucune notification",
-     "mark_all_read": "Marquer tout comme lu",
-     "case_won": "Victoire Caisse",
-     "achievement_unlocked": "Succès Débloqué",
-     "bonus_available": "Bonus Disponible",
-     "subscription_expiring": "Abonnement Expire",
-     "new_items": "Nouveaux Objets Ajoutés"
-   },
-   "language": {
-     "title": "Langue",
-     "select_language": "Sélectionner la langue",
-     "russian": "Русский",
-     "english": "English",
-     "chinese": "中文",
-     "spanish": "Español",
-     "french": "Français",
-     "german": "Deutsch",
-     "japanese": "日本語",
-     "korean": "한국어"
-   },
-   "errors": {
-     "network_error": "Erreur Réseau",
-     "server_error": "Erreur Serveur",
-     "not_found": "Non Trouvé",
-     "access_denied": "Accès Refusé",
-     "insufficient_balance": "Solde Insuffisant",
-     "invalid_trade_url": "URL d'échange Invalide",
-     "case_not_available": "Caisse Non Disponible",
-     "rate_limit": "Trop de Demandes"
-   },
-   "time": {
-     "seconds": "secondes",
-     "minutes": "minutes",
-     "hours": "heures",
-     "days": "jours",
-     "second": "seconde",
-     "minute": "minute",
-     "hour": "heure",
-     "day": "jour"
-   }
- }
- 
+  "common": {
+    "loading": "Chargement...",
+    "error": "Erreur",
+    "success": "Succès",
+    "cancel": "Annuler",
+    "confirm": "Confirmer",
+    "save": "Sauvegarder",
+    "delete": "Supprimer",
+    "edit": "Modifier",
+    "back": "Retour",
+    "next": "Suivant",
+    "close": "Fermer",
+    "open": "Ouvrir",
+    "play": "Jouer",
+    "daily": "quotidien",
+    "online": "En ligne : {{count}}",
+    "balance": "Solde"
+  },
+  "header": {
+    "home": "Accueil",
+    "cases": "Caisses",
+    "profile": "Profil",
+    "leaderboard": "Classement",
+    "inventory": "Inventaire",
+    "exchange": "Échange",
+    "slots": "Machines à sous",
+    "login": "Connexion",
+    "register": "S'inscrire",
+    "logout": "Déconnexion",
+    "notifications": "Notifications"
+  },
+  "auth": {
+    "login_title": "Se connecter",
+    "register_title": "Créer un compte",
+    "username": "Nom d'utilisateur",
+    "email": "Adresse e-mail",
+    "password": "Mot de passe",
+    "confirm_password": "Confirmer le mot de passe",
+    "remember_me": "Se souvenir de moi",
+    "forgot_password": "Mot de passe oublié ?",
+    "no_account": "Pas de compte ?",
+    "have_account": "Déjà un compte ?",
+    "steam_login": "Se connecter avec Steam",
+    "login_success": "Connexion réussie",
+    "register_success": "Inscription réussie",
+    "invalid_credentials": "Identifiants invalides",
+    "email_verification": "Vérification e-mail"
+  },
+  "cases": {
+    "title": "Caisses",
+    "premium_case": "Caisse Premium",
+    "daily_case": "Caisse Quotidienne",
+    "bonus_case": "Caisse Bonus",
+    "buy_case": "Acheter Caisse",
+    "open_case": "Ouvrir Caisse",
+    "case_opened": "Caisse Ouverte !",
+    "congratulations": "Félicitations !",
+    "you_won": "Vous avez gagné :",
+    "next_case_in": "Prochaine caisse dans :",
+    "available_in": "Disponible dans :",
+    "case_preview": "Aperçu de la caisse",
+    "case_contents": "Contenu de la caisse",
+    "drop_rate": "Taux de drop"
+  },
+  "profile": {
+    "title": "Profil",
+    "statistics": "Statistiques",
+    "achievements": "Succès",
+    "transactions": "Transactions",
+    "settings": "Paramètres",
+    "level": "Niveau",
+    "experience": "Expérience",
+    "cases_opened": "Caisses Ouvertes",
+    "total_spent": "Total Dépensé",
+    "total_won": "Total Gagné",
+    "winnings": "Gains",
+    "subscription": "Abonnement",
+    "subscription_active": "Abonnement Actif",
+    "subscription_expires": "Abonnement Expire",
+    "subscription_days_left": "Jours restants : {{days}}",
+    "steam_profile": "Profil Steam",
+    "trade_url": "URL d'échange"
+  },
+  "inventory": {
+    "title": "Inventaire",
+    "your_items": "Vos Objets",
+    "no_items": "Vous n'avez pas encore d'objets",
+    "sell_item": "Vendre Objet",
+    "withdraw_item": "Retirer Objet",
+    "item_sold": "Objet Vendu",
+    "item_withdrawn": "Objet Retiré",
+    "rarity": "Rareté",
+    "price": "Prix",
+    "value": "Valeur"
+  },
+  "leaderboard": {
+    "title": "Classement des Joueurs",
+    "top_players": "Meilleurs Joueurs",
+    "rank": "Rang",
+    "player": "Joueur",
+    "total_winnings": "Gains Totaux",
+    "cases_opened_count": "Caisses Ouvertes",
+    "win_rate": "Taux de Victoire"
+  },
+  "games": {
+    "slots": "Machines à sous",
+    "roulette": "Roulette",
+    "tic_tac_toe": "Morpion",
+    "play_now": "Jouer Maintenant",
+    "bet_amount": "Montant du Pari",
+    "spin": "Tourner",
+    "place_bet": "Placer Pari",
+    "game_result": "Résultat du Jeu",
+    "you_win": "Vous Gagnez !",
+    "you_lose": "Vous Perdez",
+    "jackpot": "Jackpot !",
+    "bonus_game": "Jeu Bonus",
+    "mini_game": "Mini Jeu"
+  },
+  "payment": {
+    "deposit": "Déposer",
+    "withdraw": "Retirer",
+    "amount": "Montant",
+    "payment_method": "Méthode de Paiement",
+    "card": "Carte de Crédit",
+    "crypto": "Cryptomonnaie",
+    "steam_wallet": "Portefeuille Steam",
+    "minimum_deposit": "Dépôt Minimum",
+    "maximum_deposit": "Dépôt Maximum",
+    "processing": "Traitement du paiement...",
+    "success": "Paiement réussi",
+    "failed": "Paiement échoué"
+  },
+  "notifications": {
+    "no_notifications": "Aucune notification",
+    "mark_all_read": "Marquer tout comme lu",
+    "case_won": "Victoire Caisse",
+    "achievement_unlocked": "Succès Débloqué",
+    "bonus_available": "Bonus Disponible",
+    "subscription_expiring": "Abonnement Expire",
+    "new_items": "Nouveaux Objets Ajoutés"
+  },
+  "language": {
+    "title": "Langue",
+    "select_language": "Sélectionner la langue",
+    "russian": "Русский",
+    "english": "English",
+    "chinese": "中文",
+    "spanish": "Español",
+    "french": "Français",
+    "german": "Deutsch",
+    "japanese": "日本語",
+    "korean": "한국어"
+  },
+  "errors": {
+    "network_error": "Erreur Réseau",
+    "server_error": "Erreur Serveur",
+    "not_found": "Non Trouvé",
+    "access_denied": "Accès Refusé",
+    "insufficient_balance": "Solde Insuffisant",
+    "invalid_trade_url": "URL d'échange Invalide",
+    "case_not_available": "Caisse Non Disponible",
+    "rate_limit": "Trop de Demandes"
+  },
+  "time": {
+    "seconds": "secondes",
+    "minutes": "minutes",
+    "hours": "heures",
+    "days": "jours",
+    "second": "seconde",
+    "minute": "minute",
+    "hour": "heure",
+    "day": "jour"
+  },
+  "exchange": {
+    "title": "ÉCHANGE D'OBJETS",
+    "subtitle": "Vendre • Échanger • Obtenir un Statut",
+    "balance": "SOLDE",
+    "status": "STATUT",
+    "no_status": "AUCUN",
+    "exchange_rate": "TAUX",
+    "tier": "Niveau {{tier}}",
+    "sell_mode": "💰 VENDRE",
+    "exchange_mode": "⭐ ÉCHANGER",
+    "search_placeholder": "🔍 Rechercher objets...",
+    "all_rarities": "Toutes les Raretés",
+    "show_info": "▶ Afficher les informations de prix",
+    "hide_info": "▼ Masquer les informations",
+    "exchange_rates_title": "Taux d'Échange",
+    "exchange_rates_description": "Informations détaillées sur les prix et conditions",
+    "tier_1_title": "Niveau 1 (Statut)",
+    "tier_1_price": "150₽ par jour",
+    "tier_1_description": "Abonnement de base",
+    "tier_2_title": "Niveau 2 (Statut+)",
+    "tier_2_price": "150₽ par jour",
+    "tier_2_description": "Abonnement amélioré",
+    "tier_3_title": "Niveau 3 (Statut++)",
+    "tier_3_price": "300₽ par jour",
+    "tier_3_description": "Abonnement premium",
+    "important_conditions": "Conditions importantes :",
+    "min_exchange_price": "Valeur minimale de l'objet pour l'échange : {{price}}₽",
+    "sell_percentage": "En vendant vous recevez 70% de la valeur de l'objet",
+    "no_returns": "Les objets échangés ne peuvent pas être retournés",
+    "days_accumulate": "Les jours d'abonnement s'accumulent avec les actuels",
+    "items_for_sale": "Objets à Vendre",
+    "items_for_exchange": "Objets à Échanger",
+    "items_count": "{{count}} objets",
+    "loading_inventory": "Chargement de l'inventaire...",
+    "inventory_error": "Erreur de chargement de l'inventaire",
+    "try_again": "Réessayer",
+    "no_items_to_sell": "Aucun objet à vendre",
+    "no_items_in_inventory": "Aucun objet dans l'inventaire",
+    "open_cases_to_sell": "Essayez d'ouvrir des caisses pour obtenir des objets à vendre",
+    "change_filters_or_open_cases": "Essayez de changer les filtres ou d'ouvrir des caisses",
+    "item_price": "Prix :",
+    "item_sell_price": "Vente :",
+    "item_subscription_days": "Statut :",
+    "days_few": "Peu",
+    "sell_for": "💸 Vendre pour {{price}}₽",
+    "selling": "Vente en cours...",
+    "exchange_for": "⭐ Échanger pour {{days}}",
+    "exchanging": "Échange en cours...",
+    "too_cheap": "❌ Trop bon marché",
+    "rarity_covert": "DISSIMULÉ",
+    "rarity_classified": "CLASSIFIÉ",
+    "rarity_restricted": "RESTREINT",
+    "rarity_milspec": "QUALITÉ MILITAIRE",
+    "rarity_industrial": "INDUSTRIEL",
+    "rarity_consumer": "CONSOMMATEUR",
+    "rarity_contraband": "CONTREBANDE"
+  },
+  "slots": {
+    "title": "Machine à Sous",
+    "description": "Obtenez 3 objets identiques pour gagner",
+    "spin_cost": "Coût du Tour",
+    "your_balance": "Votre Solde",
+    "play_button": "Jouer (10 ₽)",
+    "spinning": "En cours...",
+    "loading_items": "Chargement des objets...",
+    "preparing_game": "Préparation du jeu",
+    "loading_error": "Erreur de Chargement",
+    "failed_to_load": "Échec du chargement des données du jeu",
+    "reload": "Recharger",
+    "congratulations_jackpot": "Félicitations ! Jackpot !",
+    "winning_item": "Objet gagnant :",
+    "item_value": "Valeur :",
+    "no_luck": "Pas de chance",
+    "try_again": "Réessayez !",
+    "result": "Résultat :",
+    "empty": "Vide",
+    "insufficient_funds": "Fonds insuffisants pour jouer",
+    "please_login": "Veuillez vous connecter pour jouer",
+    "loading_items_status": "Chargement des objets...",
+    "game_result_congratulations": "🎉 Félicitations ! Vous avez gagné {{itemName}} !",
+    "game_result_no_luck": "😔 Pas de chance cette fois",
+    "connection_error": "Erreur de connexion au serveur",
+    "unknown_error": "Quelque chose a mal tourné"
+  },
+  "leaderboard_page": {
+    "title": "Tableau de Classement",
+    "cases_opened_tab": "Caisses Ouvertes",
+    "cases_opened_description": "Meilleurs joueurs par nombre de caisses ouvertes",
+    "level_tab": "Niveau",
+    "level_description": "Meilleurs joueurs par niveau et expérience",
+    "best_drop_tab": "Meilleur Drop",
+    "best_drop_description": "Meilleurs joueurs par objet le plus cher",
+    "auth_required": "Autorisation requise",
+    "leaderboard_error": "Erreur de chargement du classement",
+    "data_error": "Erreur de chargement des données",
+    "loading_data": "Chargement des données...",
+    "no_data": "Aucune donnée à afficher",
+    "rank": "Rang",
+    "player": "Joueur",
+    "score_label": "Score",
+    "level_label": "Niveau",
+    "cases_opened_label": "Caisses Ouvertes",
+    "most_expensive_item_label": "Objet le Plus Cher",
+    "level_prefix": "Niveau {{level}}"
+  },
+  "case_preview_modal": {
+    "free_case": "Caisse Gratuite",
+    "loading_items": "Chargement des objets...",
+    "loading_error": "Erreur de chargement des objets",
+    "no_items": "Aucun objet trouvé",
+    "close": "Fermer",
+    "payment_method": "Paiement :",
+    "balance_payment": "Solde",
+    "card_payment": "Carte Bancaire",
+    "buy": "Acheter",
+    "open": "Ouvrir",
+    "buy_and_open": "Acheter et Ouvrir",
+    "open_case": "Ouvrir la Caisse",
+    "buying": "Achat en cours...",
+    "opening": "Ouverture en cours...",
+    "going_to_payment": "Redirection vers le paiement...",
+    "no_image": "Aucune image",
+    "already_received": "✓ Déjà reçu",
+    "chance": "Chance :",
+    "bonus": "bonus",
+    "received": "✓ Reçu !",
+    "subscription_required": "Nécessite un niveau de statut {{tier}}+",
+    "your_level": "Votre niveau : {{level}}"
+  },
+  "tic_tac_toe": {
+    "title": "Morpion",
+    "description": "Jouez au morpion et gagnez des pièces !",
+    "bet_amount": "Montant du Pari :",
+    "your_turn": "Votre Tour",
+    "computer_turn": "Tour de l'Ordinateur",
+    "you_win": "Vous Gagnez !",
+    "you_lose": "Vous Perdez !",
+    "draw": "Égalité !",
+    "play_again": "Rejouer",
+    "start_game": "Commencer le Jeu",
+    "insufficient_balance": "Solde Insuffisant",
+    "game_rules": "Règles du Jeu",
+    "rule_1": "Placez votre pari et commencez le jeu",
+    "rule_2": "Obtenez 3 symboles en ligne pour gagner",
+    "rule_3": "Gagnez et obtenez le double de votre pari",
+    "rule_4": "Perdez ou égalité et votre pari est perdu"
+  },
+  "modal": {
+    "confirm": "Confirmer",
+    "cancel": "Annuler",
+    "close": "Fermer",
+    "save": "Sauvegarder",
+    "delete": "Supprimer",
+    "loading": "Chargement...",
+    "error": "Erreur",
+    "success": "Succès",
+    "warning": "Avertissement",
+    "info": "Information"
+  },
+  "registration_success_modal": {
+    "title": "Inscription Terminée !",
+    "welcome": "Bienvenue chez ChiBox !",
+    "account_created": "Votre compte a été créé avec succès",
+    "getting_started": "Que faire ensuite :",
+    "step_1": "Ouvrez votre première caisse gratuite",
+    "step_2": "Explorez les objets dans votre inventaire",
+    "step_3": "Considérez obtenir un statut pour les bonus",
+    "step_4": "Participez aux jeux et compétitions",
+    "start_playing": "Commencer à Jouer",
+    "bonus_received": "Vous avez reçu un bonus de départ !"
+  },
+  "notifications_header": {
+    "title": "Notifications",
+    "no_notifications": "Aucune nouvelle notification",
+    "mark_all_read": "Marquer tout comme lu",
+    "loading": "Chargement des notifications...",
+    "error": "Erreur de chargement des notifications",
+    "case_opened": "Caisse ouverte",
+    "item_received": "Objet reçu",
+    "achievement_unlocked": "Succès débloqué",
+    "subscription_reminder": "Rappel d'abonnement",
+    "bonus_available": "Bonus disponible"
+  },
+  "live_drops": {
+    "title": "🔥 Drops Récents",
+    "player_won": "{{player}} a gagné",
+    "just_now": "à l'instant",
+    "minutes_ago": "il y a {{minutes}} min",
+    "hour_ago": "il y a une heure",
+    "hours_ago": "il y a {{hours}} h",
+    "no_drops": "Aucun drop pour l'instant",
+    "loading_drops": "Chargement des drops..."
+  },
+  "banner": {
+    "daily_bonus": "Bonus Quotidien",
+    "claim_bonus": "Réclamer le Bonus",
+    "bonus_claimed": "Bonus Réclamé",
+    "next_bonus_in": "Prochain bonus dans :",
+    "welcome_bonus": "Bonus de Bienvenue",
+    "subscription_offer": "Offre Spéciale",
+    "limited_time": "Temps Limité",
+    "get_status": "Obtenir un Statut"
+  }
+}
