--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -551,5 +551,208 @@
       "Просто супер!",
       "Вы везунчик!"
     ]
+  },
+  "exchange": {
+    "title": "ОБМЕН ПРЕДМЕТОВ",
+    "subtitle": "Продавай • Обменивай • Получай статус",
+    "balance": "БАЛАНС",
+    "status": "СТАТУС",
+    "no_status": "НЕТ",
+    "exchange_rate": "КУРС",
+    "tier": "Тариф {{tier}}",
+    "sell_mode": "💰 ПРОДАЖА",
+    "exchange_mode": "⭐ ОБМЕН",
+    "search_placeholder": "🔍 Поиск предметов...",
+    "all_rarities": "Все редкости",
+    "show_info": "▶ Показать информацию о тарифах",
+    "hide_info": "▼ Скрыть информацию",
+    "exchange_rates_title": "Тарифы обмена",
+    "exchange_rates_description": "Подробная информация о ценах и условиях обмена",
+    "tier_1_title": "Тариф 1 (Статус)",
+    "tier_1_price": "150₽ за день",
+    "tier_1_description": "Базовая подписка",
+    "tier_2_title": "Тариф 2 (Статус+)",
+    "tier_2_price": "150₽ за день",
+    "tier_2_description": "Улучшенная подписка",
+    "tier_3_title": "Тариф 3 (Статус++)",
+    "tier_3_price": "300₽ за день",
+    "tier_3_description": "Премиум подписка",
+    "important_conditions": "Важные условия:",
+    "min_exchange_price": "Минимальная стоимость предмета для обмена: {{price}}₽",
+    "sell_percentage": "При продаже вы получаете 70% от стоимости предмета",
+    "no_returns": "Обменянные предметы нельзя вернуть",
+    "days_accumulate": "Дни подписки суммируются с текущими",
+    "items_for_sale": "Предметы для продажи",
+    "items_for_exchange": "Предметы для обмена",
+    "items_count": "{{count}} предметов",
+    "loading_inventory": "Загрузка инвентаря...",
+    "inventory_error": "Ошибка загрузки инвентаря",
+    "try_again": "Попробовать снова",
+    "no_items_to_sell": "Нет предметов для продажи",
+    "no_items_in_inventory": "Нет предметов в инвентаре",
+    "open_cases_to_sell": "Попробуйте открыть кейсы, чтобы получить предметы для продажи",
+    "change_filters_or_open_cases": "Попробуйте изменить фильтры или открыть кейсы",
+    "item_price": "Цена:",
+    "item_sell_price": "Продажа:",
+    "item_subscription_days": "Статус:",
+    "days_few": "Мало",
+    "sell_for": "💸 Продать за {{price}}₽",
+    "selling": "Продаём...",
+    "exchange_for": "⭐ Обменять на {{days}}",
+    "exchanging": "Обмениваем...",
+    "too_cheap": "❌ Слишком дешевый",
+    "rarity_covert": "СЕКРЕТНОЕ",
+    "rarity_classified": "ЗАСЕКРЕЧЕННОЕ",
+    "rarity_restricted": "ЗАПРЕЩЁННОЕ",
+    "rarity_milspec": "АРМЕЙСКОЕ",
+    "rarity_industrial": "ПРОМЫШЛЕННОЕ",
+    "rarity_consumer": "ПОТРЕБИТЕЛЬСКОЕ",
+    "rarity_contraband": "КОНТРАБАНДА"
+  },
+  "slots": {
+    "title": "Слот-машина",
+    "description": "Соберите 3 одинаковых предмета для победы",
+    "spin_cost": "Стоимость спина",
+    "your_balance": "Ваш баланс",
+    "play_button": "Играть (10 ₽)",
+    "spinning": "Крутится...",
+    "loading_items": "Загружаем предметы...",
+    "preparing_game": "Подготавливаем игру",
+    "loading_error": "Ошибка загрузки",
+    "failed_to_load": "Не удалось загрузить данные игры",
+    "reload": "Перезагрузить",
+    "congratulations_jackpot": "Поздравляем! Джекпот!",
+    "winning_item": "Выигрышный предмет:",
+    "item_value": "Стоимость:",
+    "no_luck": "Не повезло",
+    "try_again": "Попробуйте еще раз!",
+    "result": "Выпало:",
+    "empty": "Пусто",
+    "insufficient_funds": "Недостаточно средств для игры",
+    "please_login": "Войдите в аккаунт для игры",
+    "loading_items_status": "Загружаем предметы...",
+    "game_result_congratulations": "🎉 Поздравляем! Вы выиграли {{itemName}}!",
+    "game_result_no_luck": "😔 Не повезло в этот раз",
+    "connection_error": "Ошибка соединения с сервером",
+    "unknown_error": "Что-то пошло не так"
+  },
+  "leaderboard_page": {
+    "title": "Таблица лидеров",
+    "cases_opened_tab": "Открытые кейсы",
+    "cases_opened_description": "Топ игроков по количеству открытых кейсов",
+    "level_tab": "Уровень",
+    "level_description": "Топ игроков по уровню и опыту",
+    "best_drop_tab": "Лучший дроп",
+    "best_drop_description": "Топ игроков по самому дорогому предмету",
+    "auth_required": "Требуется авторизация",
+    "leaderboard_error": "Ошибка загрузки лидерборда",
+    "data_error": "Ошибка загрузки данных",
+    "loading_data": "Загрузка данных...",
+    "no_data": "Нет данных для отображения",
+    "rank": "Ранг",
+    "player": "Игрок",
+    "score_label": "Очки",
+    "level_label": "Уровень",
+    "cases_opened_label": "Кейсов открыто",
+    "most_expensive_item_label": "Самый дорогой предмет",
+    "level_prefix": "Уровень {{level}}"
+  },
+  "case_preview_modal": {
+    "free_case": "Бесплатный кейс",
+    "loading_items": "Загрузка предметов...",
+    "loading_error": "Ошибка загрузки предметов",
+    "no_items": "Предметы не найдены",
+    "close": "Закрыть",
+    "payment_method": "Оплата:",
+    "balance_payment": "Баланс",
+    "card_payment": "Банковская карта",
+    "buy": "Купить",
+    "open": "Открыть",
+    "buy_and_open": "Купить и открыть",
+    "open_case": "Открыть кейс",
+    "buying": "Покупка...",
+    "opening": "Открытие...",
+    "going_to_payment": "Переход к оплате...",
+    "no_image": "Нет изображения",
+    "already_received": "✓ Уже получен",
+    "chance": "Шанс:",
+    "bonus": "бонус",
+    "received": "✓ Получен!",
+    "subscription_required": "Требуется статус уровня {{tier}}+",
+    "your_level": "Ваш уровень: {{level}}"
+  },
+  "tic_tac_toe": {
+    "title": "Крестики-нолики",
+    "description": "Сыграйте в крестики-нолики и выиграйте монеты!",
+    "bet_amount": "Размер ставки:",
+    "your_turn": "Ваш ход",
+    "computer_turn": "Ход компьютера",
+    "you_win": "Вы победили!",
+    "you_lose": "Вы проиграли!",
+    "draw": "Ничья!",
+    "play_again": "Играть снова",
+    "start_game": "Начать игру",
+    "insufficient_balance": "Недостаточно средств",
+    "game_rules": "Правила игры",
+    "rule_1": "Сделайте ставку и начните игру",
+    "rule_2": "Соберите 3 символа в ряд, чтобы выиграть",
+    "rule_3": "При победе вы получаете удвоенную ставку",
+    "rule_4": "При поражении или ничьей ставка сгорает"
+  },
+  "modal": {
+    "confirm": "Подтвердить",
+    "cancel": "Отмена",
+    "close": "Закрыть",
+    "save": "Сохранить",
+    "delete": "Удалить",
+    "loading": "Загрузка...",
+    "error": "Ошибка",
+    "success": "Успешно",
+    "warning": "Предупреждение",
+    "info": "Информация"
+  },
+  "registration_success_modal": {
+    "title": "Регистрация завершена!",
+    "welcome": "Добро пожаловать в ChiBox!",
+    "account_created": "Ваш аккаунт успешно создан",
+    "getting_started": "Что дальше:",
+    "step_1": "Откройте свой первый бесплатный кейс",
+    "step_2": "Изучите предметы в инвентаре",
+    "step_3": "Рассмотрите покупку статуса для бонусов",
+    "step_4": "Участвуйте в играх и соревнованиях",
+    "start_playing": "Начать играть",
+    "bonus_received": "Вы получили стартовый бонус!"
+  },
+  "notifications_header": {
+    "title": "Уведомления",
+    "no_notifications": "Нет новых уведомлений",
+    "mark_all_read": "Отметить все как прочитанные",
+    "loading": "Загрузка уведомлений...",
+    "error": "Ошибка загрузки уведомлений",
+    "case_opened": "Кейс открыт",
+    "item_received": "Получен предмет",
+    "achievement_unlocked": "Достижение разблокировано",
+    "subscription_reminder": "Напоминание о подписке",
+    "bonus_available": "Доступен бонус"
+  },
+  "live_drops": {
+    "title": "🔥 Последние дропы",
+    "player_won": "{{player}} выиграл",
+    "just_now": "только что",
+    "minutes_ago": "{{minutes}} мин. назад",
+    "hour_ago": "час назад",
+    "hours_ago": "{{hours}} ч. назад",
+    "no_drops": "Пока нет дропов",
+    "loading_drops": "Загрузка дропов..."
+  },
+  "banner": {
+    "daily_bonus": "Ежедневный бонус",
+    "claim_bonus": "Получить бонус",
+    "bonus_claimed": "Бонус получен",
+    "next_bonus_in": "Следующий бонус через:",
+    "welcome_bonus": "Приветственный бонус",
+    "subscription_offer": "Специальное предложение",
+    "limited_time": "Ограниченное время",
+    "get_status": "Получить статус"
   }
 }
